--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-7 [特朗普重返白宫 分析：印太盟友与中国皆忧地缘政治“剧变”](/articles/voa/1011240.md)
+
 11-7 [特朗普胜选催动美国股市暴涨，中港股市动荡](/articles/voa/1011241.md)
 
 11-7 [特朗普当选料将改变美欧关系格局，欧洲称愿加强合作同时维护自身利益](/articles/voa/1011242.md)
@@ -598,6 +600,4 @@
 10-26 [布林肯宣布美国将向巴勒斯坦平民提供1.35亿美元的额外援助](/articles/voa/1011538.md)
 
 10-26 [民调显示，美国人对中国的负面看法创两国建交以来的最低点](/articles/voa/1011539.md)
-
-10-26 [为应对中国高超音速武器，美海军舰只将配备加强型爱国者反导系统](/articles/voa/1011540.md)
 
