--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-7 [俄罗斯渲染美国大选“末日景象”](/articles/voa/1011237.md)
+
+11-7 [特朗普就任后预计将重启对伊朗的制裁，中国小炼油厂受影响最大](/articles/voa/1011238.md)
+
+11-7 [乌军首次与朝鲜部队交火，俄乌战争重大升级](/articles/voa/1011239.md)
+
 11-7 [特朗普重返白宫 分析：印太盟友与中国皆忧地缘政治“剧变”](/articles/voa/1011240.md)
 
 11-7 [特朗普胜选催动美国股市暴涨，中港股市动荡](/articles/voa/1011241.md)
@@ -594,10 +600,4 @@
 10-26 [朝鲜出兵援俄，中国是喜是忧？](/articles/voa/1011535.md)
 
 10-26 [华为设备“偷装”台积电先进芯片？分析：美国对华科技围堵有漏洞](/articles/voa/1011536.md)
-
-10-26 [日本27日将举行大选 结果会影响中日关系吗？](/articles/voa/1011537.md)
-
-10-26 [布林肯宣布美国将向巴勒斯坦平民提供1.35亿美元的额外援助](/articles/voa/1011538.md)
-
-10-26 [民调显示，美国人对中国的负面看法创两国建交以来的最低点](/articles/voa/1011539.md)
 
