--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+11-7 [特朗普重返白宫，开启新的不确定时代](/articles/nyt/1042237.md)
+
+11-7 [大选之夜：从“胜负难料”到特朗普的强势“涅槃”](/articles/nyt/1042238.md)
+
 11-6 [香港逐步淘汰不达标㓥房，穷人栖身何处？](/articles/nyt/1042239.md)
 
 11-6 [俄罗斯被指密谋在欧洲货机上放置燃烧装置](/articles/nyt/1042240.md)
@@ -596,8 +600,4 @@
 7-29 [贺锦丽为何很少被视为“亚裔美国人”](/articles/nyt/1042535.md)
 
 7-29 [产能过剩、价格大跌：中国太阳能产业陷入动荡](/articles/nyt/1042536.md)
-
-7-29 [布林肯与王毅会面，就中国对俄罗斯军事支持向中方施压](/articles/nyt/1042537.md)
-
-7-26 [美国芯片为何仍流入俄罗斯？香港空壳公司背后的秘密链条](/articles/nyt/1042538.md)
 
