--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+11-7 [特朗普回归白宫对中国意味着什么？](/articles/voa/1011227.md)
+
+11-7 [中国趁美国大选之际以假讯息制造美国分裂](/articles/voa/1011228.md)
+
+11-7 [特朗普获胜后 法国人担心、喜悦 呼吁一个强大的欧洲](/articles/voa/1011229.md)
+
+11-7 [特别检察官考虑在特朗普胜选后如何结束两项针对他的联邦案件](/articles/voa/1011230.md)
+
 11-7 [世界领导人祝贺特朗普当选](/articles/voa/1011231.md)
 
 11-7 [异议人士抗议中国利用国际刑警进行跨国镇压](/articles/voa/1011232.md)
@@ -592,12 +600,4 @@
 10-26 [中国黑客入侵美国电信系统 试图获取特朗普和哈里斯竞选团队的数据](/articles/voa/1011525.md)
 
 10-26 [泽连斯基：朝鲜军队最早星期天被部署参战](/articles/voa/1011526.md)
-
-10-26 [专家：俄罗斯网络攻击寻求遏阻格鲁吉亚倾向西方](/articles/voa/1011527.md)
-
-10-26 [世界媒体看中国：印尼驱逐中国海警船](/articles/voa/1011528.md)
-
-10-26 [台湾宪法法庭宣判：总统立院国情报告、国会调查权、藐视国会罪等条文违宪](/articles/voa/1011529.md)
-
-10-26 [朝鲜寻求俄罗斯军事援助作为其部署军队到乌克兰的回报](/articles/voa/1011530.md)
 
