--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-7 [又是难以预测的四年？世界为迎接特朗普回归做准备](/articles/nyt/1042235.md)
+
 11-7 [美国选择了一位强人领袖](/articles/nyt/1042236.md)
 
 11-7 [特朗普重返白宫，开启新的不确定时代](/articles/nyt/1042237.md)
@@ -598,6 +600,4 @@
 7-30 [贺锦丽的“秘密武器”：笑](/articles/nyt/1042533.md)
 
 7-29 [关于特朗普、拜登和贺锦丽健康状况的14个问题](/articles/nyt/1042534.md)
-
-7-29 [贺锦丽为何很少被视为“亚裔美国人”](/articles/nyt/1042535.md)
 
