--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-7 [台湾朝野祝贺特朗普当选，学者称其用人或成对台政策关键](/articles/voa/1011223.md)
+
 11-7 [直击大选假信息：中国官媒亲自下场制作视频，宣扬美国大选分裂](/articles/voa/1011224.md)
 
 11-7 [哈里斯承认败选 致电特朗普表示祝贺](/articles/voa/1011225.md)
@@ -598,6 +600,4 @@
 10-26 [以色列空袭伊朗以报复10月初的导弹袭击 中东战争升级风险扩大](/articles/voa/1011521.md)
 
 10-26 [专家：安卡拉的库尔德武装袭击可能会阻碍土耳其和谈前景](/articles/voa/1011522.md)
-
-10-26 [NASA一名宇航员在太空长期停留返回地球后在医院观察](/articles/voa/1011523.md)
 
