--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-7 [老萧杂说｜这个靠抓“软肋”出名的街道，又对居民放刁撒泼](/articles/cdt/335698.md)
+
+11-7 [南方周末｜她们想知道，究竟是谁在生二孩？](/articles/cdt/335702.md)
+
 11-6 [人物｜被余华英拐卖的17个孩子，和那些停在原地的家庭](/articles/cdt/335708.md)
 
 11-6 [鱼眼观察｜电动车新国标难得民心，终于有人重磅发声了！](/articles/cdt/335711.md)
@@ -596,8 +600,4 @@
 10-1 [中国政治及宗教受难者后援会（澳大利亚）| 公告：2024年度（第一届）中国当代英雄母亲奖颁奖词](/articles/cdt/336758.md)
 
 9-28 [木蹊说｜大放水，还不足以解决根本问题](/articles/cdt/336763.md)
-
-9-28 [剑客写字的地方｜生育率降低，学校要承担很大一部分责任](/articles/cdt/336764.md)
-
-9-28 [城市的地得｜为“贞观”流一滴眼泪](/articles/cdt/336765.md)
 
