--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-7 [中国出口激增超出预期 工厂抢在特朗普关税威胁前加紧出货](/articles/voa/1011220.md)
+
 11-7 [中日韩领导人电贺特朗普 习近平盼 “妥善管控分歧” 石破茂、尹锡悦寻求会晤特朗普](/articles/voa/1011221.md)
 
 11-7 [在美港人相信下届美国政府将支持香港争取民主 离散港人关心移民政策](/articles/voa/1011222.md)
@@ -598,6 +600,4 @@
 10-26 [英国财政大臣称需采取“冷静务实”方式促进对华贸易](/articles/voa/1011518.md)
 
 10-26 [马斯克与普京的定期接触引发了美国国家安全的担忧](/articles/voa/1011519.md)
-
-10-26 [中国斥赖清德不纪念“光复节”意图建构台独史观，学者：台湾主权未定有自己多元史观](/articles/voa/1011520.md)
 
