--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-7 [一个自命不凡、自以为是的政党遭遇惨败](/articles/nyt/1042230.md)
+
 11-7 [“特朗普的美国”才是真正的美国？](/articles/nyt/1042231.md)
 
 11-7 [贺锦丽为何会输？抽象的真理败给眼前切实的问题](/articles/nyt/1042232.md)
@@ -598,6 +600,4 @@
 7-31 [中国电动汽车“出海”如何重塑一个国家的汽车产业](/articles/nyt/1042528.md)
 
 7-30 [万斯何以飞速“上位”？靠硅谷“大佬”](/articles/nyt/1042529.md)
-
-7-30 [从精英律师到“第二夫人”候选：万斯印度裔妻子引关注](/articles/nyt/1042530.md)
 
