--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-7 [每日一语 2024.11.6](/articles/cdt/335692.md)
+
+11-7 [看客inSight｜熬过漫长的规培期，护士想去看心理医生](/articles/cdt/335695.md)
+
 11-7 [老萧杂说｜这个靠抓“软肋”出名的街道，又对居民放刁撒泼](/articles/cdt/335698.md)
 
 11-7 [南方周末｜她们想知道，究竟是谁在生二孩？](/articles/cdt/335702.md)
@@ -596,8 +600,4 @@
 9-28 [古老板的老巢｜股市狂欢之时，我有一点悲凉](/articles/cdt/336749.md)
 
 9-28 [忘川边的但丁｜涨成这样了，我为什么还不去炒股票](/articles/cdt/336755.md)
-
-10-1 [中国政治及宗教受难者后援会（澳大利亚）| 公告：2024年度（第一届）中国当代英雄母亲奖颁奖词](/articles/cdt/336758.md)
-
-9-28 [木蹊说｜大放水，还不足以解决根本问题](/articles/cdt/336763.md)
 
