--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-7 [特朗普胜选：德国政府的「恶梦」成真](/articles/dw/1023775.md)
+
+11-7 [美国总统的权力有多大？](/articles/dw/1023776.md)
+
 11-7 [德国红绿灯执政联盟破裂 大选或将提前举行](/articles/dw/1023777.md)
 
 11-7 [白宫新主人即将出炉 欧盟心系哪位候选人？](/articles/dw/1023778.md)
@@ -596,8 +600,4 @@
 10-8 [韩国国防部：朝鲜或派兵增援俄罗斯](/articles/dw/1024073.md)
 
 10-8 [“中国有信心实现今年社会经济发展目标”](/articles/dw/1024074.md)
-
-10-8 [人工智能研究者获得诺贝尔物理学奖](/articles/dw/1024075.md)
-
-10-8 [美国法院下令谷歌给竞争对手开放安卓商店](/articles/dw/1024076.md)
 
