--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-7 [埃隆·马斯克：美国大选中的大赢家](/articles/dw/1023773.md)
+
+11-7 [德国人怎么看特朗普和卡玛拉·哈里斯?](/articles/dw/1023774.md)
+
 11-7 [特朗普胜选：德国政府的「恶梦」成真](/articles/dw/1023775.md)
 
 11-7 [美国总统的权力有多大？](/articles/dw/1023776.md)
@@ -596,8 +600,4 @@
 10-8 [法国内政部长：本拉登之子不得再次入境](/articles/dw/1024071.md)
 
 10-8 [“季风”继续吹拂: 上海季风书园华府重生](/articles/dw/1024072.md)
-
-10-8 [韩国国防部：朝鲜或派兵增援俄罗斯](/articles/dw/1024073.md)
-
-10-8 [“中国有信心实现今年社会经济发展目标”](/articles/dw/1024074.md)
 
