--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 11-7 [看客inSight｜熬过漫长的规培期，护士想去看心理医生](/articles/cdt/335695.md)
 
+11-8 [【CDTV】法治克拉玛依｜发送违法信息时，微信会截屏、录屏存证](/articles/cdt/335696.md)
+
 11-7 [老萧杂说｜这个靠抓“软肋”出名的街道，又对居民放刁撒泼](/articles/cdt/335698.md)
 
 11-7 [南方周末｜她们想知道，究竟是谁在生二孩？](/articles/cdt/335702.md)
@@ -598,6 +600,4 @@
 9-28 [【404文库】特正经的张某某｜氓民的胜利](/articles/cdt/336747.md)
 
 9-28 [古老板的老巢｜股市狂欢之时，我有一点悲凉](/articles/cdt/336749.md)
-
-9-28 [忘川边的但丁｜涨成这样了，我为什么还不去炒股票](/articles/cdt/336755.md)
 
