--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-8 [为什么美国人愿意让特朗普重返白宫？](/articles/dw/1023769.md)
+
+11-7 [习近平电贺特朗普 提“合则两利 斗则俱伤”](/articles/dw/1023770.md)
+
 11-7 [德国红绿灯的“政治联姻”为何没能走到底？](/articles/dw/1023771.md)
 
 11-7 [涉嫌为中国提供情报 德国逮捕一名美国公民](/articles/dw/1023772.md)
@@ -596,8 +600,4 @@
 10-9 [流亡港人媒体被封 港府曾威胁美国技术服务商](/articles/dw/1024067.md)
 
 10-9 [因禁飞俄领空 荷兰皇家航司抱怨“不公平“竞争](/articles/dw/1024068.md)
-
-10-9 [最新民调：近七成台湾人愿意为保卫家乡而战](/articles/dw/1024069.md)
-
-10-9 [中美商務部長通話 美方：涉及國安不容談判](/articles/dw/1024070.md)
 
