--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -13,6 +13,8 @@
 
 11-7 [南方周末｜她们想知道，究竟是谁在生二孩？](/articles/cdt/335702.md)
 
+11-8 [【404文库】“他们扮的是‘鬼’，但他们只想活得像人！”（外二篇）](/articles/cdt/335703.md)
+
 11-6 [人物｜被余华英拐卖的17个孩子，和那些停在原地的家庭](/articles/cdt/335708.md)
 
 11-6 [鱼眼观察｜电动车新国标难得民心，终于有人重磅发声了！](/articles/cdt/335711.md)
@@ -598,6 +600,4 @@
 9-29 [现实的模样｜一个敢于向“寻衅滋事罪”说“不”的法律人，却因涉嫌“寻衅滋事”被抓了](/articles/cdt/336744.md)
 
 9-28 [【404文库】特正经的张某某｜氓民的胜利](/articles/cdt/336747.md)
-
-9-28 [古老板的老巢｜股市狂欢之时，我有一点悲凉](/articles/cdt/336749.md)
 
