--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-8 [美国起诉被控制造和分发芬太尼的一家中国化学公司及其高级成员，中国警方表示涉案者被逮捕](/articles/voa/1011203.md)
+
 11-8 [意大利对中国中化集团可能违反倍耐力公司治理规定展开调查程序](/articles/voa/1011204.md)
 
 11-8 [俄罗斯驻港总领事吁加强港俄关系 香港角色由左右逢缘变左右为难](/articles/voa/1011205.md)
@@ -598,6 +600,4 @@
 10-27 [遭台积电停止供货 中企算能科技否认做华为“白手套”](/articles/voa/1011501.md)
 
 10-27 [美国宣布对台20亿美元军售后 中国誓言要予以坚决“反制”](/articles/voa/1011502.md)
-
-10-27 [中国主导的亚投行的行长批评发达国家设置贸易壁垒](/articles/voa/1011503.md)
 
