--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-8 [阿富汗塔利班罕见与印度举行会谈](/articles/voa/1011197.md)
+
+11-8 [以色列对贝鲁特郊区发动大规模空袭](/articles/voa/1011198.md)
+
+11-8 [特朗普胜选对北约欧盟意味什么？](/articles/voa/1011199.md)
+
 11-8 [澳大利亚种族主义正卷土重来吗？](/articles/voa/1011200.md)
 
 11-8 [美联储再降息25个基点](/articles/voa/1011201.md)
@@ -594,10 +600,4 @@
 10-27 [“抱薪者，不要使其冻死于风雪”洛杉矶异议人士声援被中国警方非法拘捕的人权律师](/articles/voa/1011495.md)
 
 10-27 [俄罗斯连续两晚对基辅展开无人机攻击](/articles/voa/1011496.md)
-
-10-27 [美国批准对台军售后 中共在台湾周边展开“联合战备警巡](/articles/voa/1011497.md)
-
-10-27 [菲律宾大规模洪水和山体滑坡已造成近130人死亡及失踪](/articles/voa/1011498.md)
-
-10-27 [日本众议院大选自民党选情严峻 恐影响石破茂首相地位](/articles/voa/1011499.md)
 
