--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-8 [普京称赞特朗普 并称俄罗斯已准备好对话](/articles/voa/1011191.md)
+
+11-8 [人权组织称香港防止酷刑保障削弱，倡联合国专员访港审视](/articles/voa/1011192.md)
+
 11-8 [赖清德是否与美国当选总统特朗普通话？台湾外长：无此计划](/articles/voa/1011193.md)
 
 11-8 [北约秘书长警告俄朝合作将带来更大威胁](/articles/voa/1011194.md)
@@ -596,8 +600,4 @@
 10-28 [以色列希望报复攻击的针对性目标将限制伊朗的回应](/articles/voa/1011489.md)
 
 10-28 [日本政坛地震，选民让自民党和公明党联盟失去众议院多数席位](/articles/voa/1011490.md)
-
-10-27 [万圣节前夕上海气氛紧张：当局禁“角色扮演”加强维稳，闹市仍见“奇装异服”](/articles/voa/1011491.md)
-
-10-27 [普京再威胁若西方协助乌打击俄纵深目标，莫斯科将做出反应](/articles/voa/1011492.md)
 
