--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-8 [德国提前大选，选项党会从中受益吗？](/articles/dw/1023762.md)
+
 11-8 [美大选后 台经济部称将拟措施助台企撤中](/articles/dw/1023763.md)
 
 11-8 [华裔美国人会把票投给谁？](/articles/dw/1023764.md)
@@ -598,6 +600,4 @@
 10-9 [英国外交大臣拉米：应彻底改变英国与中国的关系](/articles/dw/1024060.md)
 
 10-9 [朝鲜关闭同韩国的边境交通](/articles/dw/1024061.md)
-
-10-9 [诱人上瘾：美国14州起诉TikTok危害青少年心理健康](/articles/dw/1024062.md)
 
