--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-8 [北京推出十万亿元化债计划给地方政府松绑，应对国际环境不确定性的增加](/articles/voa/1011186.md)
+
 11-8 [俄罗斯驻港总领事吁加强港俄关系 香港角色由左右逢源变左右为难](/articles/voa/1011187.md)
 
 11-8 [菲律宾总统签署新法律维护南中国海权利和主权 中国提出严正交涉](/articles/voa/1011188.md)
@@ -598,6 +600,4 @@
 10-28 [从移民政策到堕胎权利：美国大选的五大关键议题](/articles/voa/1011484.md)
 
 10-28 [埃及总统建议加沙停火两天，释放四名人质](/articles/voa/1011485.md)
-
-10-28 [中国制造商利用全球推动可再生能源的契机获利](/articles/voa/1011486.md)
 
