--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-9 [图拉的精神食粮｜这三年，我如何在中国媒体做记者](/articles/cdt/335675.md)
+
 11-8 [一个生物狗的科普小园｜特朗普2.0对美国健康的威胁：反疫苗急先锋RFK的反智反科学将让美国“生病”](/articles/cdt/335679.md)
 
 11-8 [张3丰的世界｜更清晰了：传统新闻业正在解体](/articles/cdt/335683.md)
@@ -598,6 +600,4 @@
 9-30 [【CDT关注】“中国长期以来盛行的极端民族主义及仇日教育，放纵了矇昧与罪恶”（外二篇）](/articles/cdt/336734.md)
 
 9-30 [【CDT周报】第188期：古有拍照勾魂，今有苹果爆炸](/articles/cdt/336735.md)
-
-9-29 [每日一语 2024.9.28](/articles/cdt/336739.md)
 
