--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-9 [中国批准三年6万亿地方债置换方案 分析：杯水车薪，经济刺激效果有限](/articles/voa/1011184.md)
+
+11-9 [金融时报：台积电下周一起停止为中国生产先进人工智能芯片](/articles/voa/1011185.md)
+
 11-8 [北京推出十万亿元化债计划给地方政府松绑，应对国际环境不确定性的增加](/articles/voa/1011186.md)
 
 11-8 [俄罗斯驻港总领事吁加强港俄关系 香港角色由左右逢源变左右为难](/articles/voa/1011187.md)
@@ -596,8 +600,4 @@
 10-28 [2.9万亿人民币中期贷款到期前 中国央行推出新借贷工具](/articles/voa/1011482.md)
 
 10-28 [特朗普和哈里斯全力以赴竞选 试图在最后一刻赢得更多选民的支持](/articles/voa/1011483.md)
-
-10-28 [从移民政策到堕胎权利：美国大选的五大关键议题](/articles/voa/1011484.md)
-
-10-28 [埃及总统建议加沙停火两天，释放四名人质](/articles/voa/1011485.md)
 
