--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,17 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-9 [每日一语 2024.11.7](/articles/cdt/335666.md)
+
+11-9 [旧闻评论｜张雪峰配享太庙，新闻人奋起驱魔|舆论手札](/articles/cdt/335674.md)
+
 11-9 [图拉的精神食粮｜这三年，我如何在中国媒体做记者](/articles/cdt/335675.md)
 
 11-8 [一个生物狗的科普小园｜特朗普2.0对美国健康的威胁：反疫苗急先锋RFK的反智反科学将让美国“生病”](/articles/cdt/335679.md)
+
+11-9 [岚目｜美国大选落幕：不止于输赢的十六点观察](/articles/cdt/335680.md)
+
+11-9 [太阳照常升起｜民主党为何会失败？](/articles/cdt/335681.md)
 
 11-8 [张3丰的世界｜更清晰了：传统新闻业正在解体](/articles/cdt/335683.md)
 
@@ -592,12 +600,4 @@
 9-30 [张鸣｜义和团始末真相](/articles/cdt/336725.md)
 
 9-30 [每日一语 2024.9.29](/articles/cdt/336728.md)
-
-9-30 [【CDT关注】WOMEN我们｜当父母成为国家的敌人，未成年的孩子们成为了“最脆弱的迫害对象”](/articles/cdt/336731.md)
-
-10-3 [【404文库】“我唯一的愿望就是，这样的悲剧不再重演”（外二篇）](/articles/cdt/336732.md)
-
-9-30 [【CDT关注】“中国长期以来盛行的极端民族主义及仇日教育，放纵了矇昧与罪恶”（外二篇）](/articles/cdt/336734.md)
-
-9-30 [【CDT周报】第188期：古有拍照勾魂，今有苹果爆炸](/articles/cdt/336735.md)
 
