--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-9 [东德和中国民主人士齐聚柏林: 分享抗争经历，反思民主之路](/articles/voa/1011181.md)
+
+11-9 [以色列球迷在阿姆斯特丹遭“反犹太”袭击，当局禁止示威三天](/articles/voa/1011182.md)
+
+11-9 [菲律宾通过新法强化南中国海主权 特朗普重返白宫使中菲局势增添变数？](/articles/voa/1011183.md)
+
 11-9 [中国批准三年6万亿地方债置换方案 分析：杯水车薪，经济刺激效果有限](/articles/voa/1011184.md)
 
 11-9 [金融时报：台积电下周一起停止为中国生产先进人工智能芯片](/articles/voa/1011185.md)
@@ -594,10 +600,4 @@
 10-28 [日本众议院大选无任何党派获得多数席位 政府形势动荡](/articles/voa/1011479.md)
 
 10-28 [美大选中迥异的全球愿景：哈里斯主张结盟，特朗普强调美国优先](/articles/voa/1011480.md)
-
-10-28 [上海警方出动大批警力 全力阻止万圣节扮装狂欢](/articles/voa/1011481.md)
-
-10-28 [2.9万亿人民币中期贷款到期前 中国央行推出新借贷工具](/articles/voa/1011482.md)
-
-10-28 [特朗普和哈里斯全力以赴竞选 试图在最后一刻赢得更多选民的支持](/articles/voa/1011483.md)
 
