--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 11-9 [每日一语 2024.11.7](/articles/cdt/335666.md)
 
+11-9 [【404文库】衣者褚｜难道李佩霞案幕后还有更耸人听闻的事？](/articles/cdt/335672.md)
+
 11-9 [旧闻评论｜张雪峰配享太庙，新闻人奋起驱魔|舆论手札](/articles/cdt/335674.md)
 
 11-9 [图拉的精神食粮｜这三年，我如何在中国媒体做记者](/articles/cdt/335675.md)
@@ -598,6 +600,4 @@
 9-30 [修明札记｜司马南代表真实民意吗？](/articles/cdt/336723.md)
 
 9-30 [张鸣｜义和团始末真相](/articles/cdt/336725.md)
-
-9-30 [每日一语 2024.9.29](/articles/cdt/336728.md)
 
