--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-9 [中国海警船进入印尼专属经济区，加剧新总统访华前的政治紧张关系](/articles/voa/1011179.md)
+
+11-9 [台湾立委控中国淘宝违法在台投放双十一商业广告](/articles/voa/1011180.md)
+
 11-9 [东德和中国民主人士齐聚柏林: 分享抗争经历，反思民主之路](/articles/voa/1011181.md)
 
 11-9 [以色列球迷在阿姆斯特丹遭“反犹太”袭击，当局禁止示威三天](/articles/voa/1011182.md)
@@ -596,8 +600,4 @@
 10-28 [经济困境迫使当局放松监管，中国私人课外辅导服务公司或东山再起](/articles/voa/1011477.md)
 
 10-28 [蒲黄榆说：上海万圣节狂欢，中国政治的黑色荒诞](/articles/voa/1011478.md)
-
-10-28 [日本众议院大选无任何党派获得多数席位 政府形势动荡](/articles/voa/1011479.md)
-
-10-28 [美大选中迥异的全球愿景：哈里斯主张结盟，特朗普强调美国优先](/articles/voa/1011480.md)
 
