--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-9 [每日一语 2024.11.8](/articles/cdt/335657.md)
+
+11-9 [竹不倒｜有一种惩罚，叫只对普通人有效！](/articles/cdt/335659.md)
+
+11-9 [【404文库】法度Law｜李佩霞案开庭，家属委托的律师一个都没进去](/articles/cdt/335663.md)
+
 11-9 [每日一语 2024.11.7](/articles/cdt/335666.md)
 
 11-9 [【404文库】衣者褚｜难道李佩霞案幕后还有更耸人听闻的事？](/articles/cdt/335672.md)
@@ -594,10 +600,4 @@
 9-30 [【告别信】幸存者笔记｜在昨天，这篇2018年的文章终于被删掉了](/articles/cdt/336707.md)
 
 9-30 [功夫财经｜用了货币政策的大杀器，还得有真正的市场化改革](/articles/cdt/336709.md)
-
-9-30 [四环青年｜要在1万点胜利会师？股票先回本了再说](/articles/cdt/336711.md)
-
-9-30 [修明札记｜司马南代表真实民意吗？](/articles/cdt/336723.md)
-
-9-30 [张鸣｜义和团始末真相](/articles/cdt/336725.md)
 
