--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+11-9 [以色列开通新的加沙人道通道](/articles/voa/1011172.md)
+
+11-9 [美国对菲律宾通过新法强化其南中国海主权表示支持](/articles/voa/1011173.md)
+
+11-9 [美国揭露伊朗控制的团伙曾策划刺杀特朗普](/articles/voa/1011174.md)
+
+11-9 [联合国称加沙的行动是“暴行”，以色列予以反驳](/articles/voa/1011175.md)
+
+11-9 [世界媒体看中国: 北京如何应对特朗普2.0](/articles/voa/1011176.md)
+
+11-9 [一名中国公民因试图擅闯特朗普的海湖庄园而被羁押](/articles/voa/1011177.md)
+
 11-9 [中缅边境局势紧张之际,中国支持缅甸军政府](/articles/voa/1011178.md)
 
 11-9 [中国海警船进入印尼专属经济区，加剧新总统访华前的政治紧张关系](/articles/voa/1011179.md)
@@ -588,16 +600,4 @@
 10-29 [日本大选执政联盟未过半 台湾学者：弱势领导恐冲击印太安全布局](/articles/voa/1011470.md)
 
 10-29 [竞选商品销售量预测大选结果比民调还准？](/articles/voa/1011471.md)
-
-10-29 [北约证实朝鲜派兵参战俄乌战争，显示俄乌冲突的“重大升级”](/articles/voa/1011472.md)
-
-10-29 [伊朗称将“使用所有可用的工具”对以色列袭击作出回应](/articles/voa/1011473.md)
-
-10-29 [菲防长：坚信美大选后白宫对亚太安全政策的连续性](/articles/voa/1011474.md)
-
-10-28 [北京一小学门口发生持刀伤人案，包括三名未成年人在内的五人受伤](/articles/voa/1011475.md)
-
-10-28 [担忧人口持续下跌，中国出台政策强化生育支持](/articles/voa/1011476.md)
-
-10-28 [经济困境迫使当局放松监管，中国私人课外辅导服务公司或东山再起](/articles/voa/1011477.md)
 
