--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-9 [美太平洋空军司令：赖清德上任后中国军机在台海活动激增，意图造成既成事实](/articles/voa/1011170.md)
+
 11-9 [法官暂停特朗普2020年选举干预案的法庭审理期限](/articles/voa/1011171.md)
 
 11-9 [以色列开通新的加沙人道通道](/articles/voa/1011172.md)
@@ -598,6 +600,4 @@
 10-29 [五角大楼：朝鲜一万名军人部署到俄罗斯](/articles/voa/1011468.md)
 
 10-29 [斯洛伐克总理菲佐访华 推动亲北京外交转向](/articles/voa/1011469.md)
-
-10-29 [日本大选执政联盟未过半 台湾学者：弱势领导恐冲击印太安全布局](/articles/voa/1011470.md)
 
