--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-9 [美陆战一师老兵眼中的长津湖战役：击退共军人海战术；师长“不可能”向“志愿军”致敬](/articles/voa/1011166.md)
+
+11-9 [朝鲜连两天干扰GPS信号 影响了韩国民用飞机和船只](/articles/voa/1011167.md)
+
 11-9 [拜登政府解禁 将允许承包商在乌克兰修理美国供应的武器](/articles/voa/1011168.md)
 
 11-9 [秘鲁与中国将签署加强版自由贸易协定](/articles/voa/1011169.md)
@@ -596,8 +600,4 @@
 10-29 [美财政部公布有关禁止美国人投资某些中国敏感技术的最终规则](/articles/voa/1011464.md)
 
 10-29 [伊朗处决德国籍伊朗裔异议人士](/articles/voa/1011465.md)
-
-10-29 [美国会两党议员敦促审查中国光子技术的威胁](/articles/voa/1011466.md)
-
-10-29 [美国就朝鲜派兵至俄罗斯向北京表达关切](/articles/voa/1011467.md)
 
