--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-9 [巴基斯坦火车站遭炸弹袭击致数十人死亡](/articles/dw/1023755.md)
+
+11-9 [美国2024：大选之夜的欢庆与失落](/articles/dw/1023756.md)
+
 11-9 [联合国：加沙战争七成死者为妇孺](/articles/dw/1023757.md)
 
 11-9 [中印边界领土争端：协议已达成，和平能否持续？](/articles/dw/1023758.md)
@@ -596,8 +600,4 @@
 10-10 [宝马和奔驰在中国市场销量大幅下滑](/articles/dw/1024053.md)
 
 10-10 [结束4年禁运 中国年底前恢复进口澳洲龙虾](/articles/dw/1024054.md)
-
-10-10 [不生小孩养“毛孩” 中国城市宠物数量或超过幼童](/articles/dw/1024055.md)
-
-10-10 [賴清德首場國慶演說：中華人民共和國無權代表台灣](/articles/dw/1024056.md)
 
