--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-9 [以习仲勋为主人翁的《西北岁月》开播 彰显习近平的根正苗红？](/articles/voa/1011163.md)
+
 11-9 [以色列球迷遇袭后，荷兰当局调查来自特拉维夫的警讯是否被忽略](/articles/voa/1011164.md)
 
 11-9 [巴基斯坦与中国签署驴肉和驴皮出口协议引发争议](/articles/voa/1011165.md)
@@ -598,6 +600,4 @@
 10-29 [前日本七三一部队老兵: 讲述真相代价沉重](/articles/voa/1011461.md)
 
 10-29 [2024年美国大选投票在即，中国议题为何没成为选举的焦点？](/articles/voa/1011462.md)
-
-10-29 [几万人抗议格鲁吉亚的议会选举结果](/articles/voa/1011463.md)
 
