--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-10 [俄乌相互空袭不断，拜登政府赶在特朗普就职前加快给基辅交付军援](/articles/voa/1011161.md)
+
 11-10 [民调: 哈里斯支持者对选举结果难以接受，半数以上表示想搬家换个环境](/articles/voa/1011162.md)
 
 11-9 [以习仲勋为主人翁的《西北岁月》开播 彰显习近平的根正苗红？](/articles/voa/1011163.md)
@@ -598,6 +600,4 @@
 10-29 [联合国工作小组抨击越南非法逮捕记者](/articles/voa/1011459.md)
 
 10-29 [匈牙利就其所称的欧盟与中俄“贸易战”对公民进行民意调查](/articles/voa/1011460.md)
-
-10-29 [前日本七三一部队老兵: 讲述真相代价沉重](/articles/voa/1011461.md)
 
