--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-10 [成都客｜从郑州到开封，有没有出路](/articles/cdt/335649.md)
+
 11-9 [桌子先生｜“生的不是孩子，是人质！”四川家长群聊天记录冲上热搜，背后真相太窒息](/articles/cdt/335650.md)
 
 11-9 [中国新闻周刊｜郑州、开封同时宣布：今晚禁行](/articles/cdt/335652.md)
@@ -598,6 +600,4 @@
 9-30 [四环青年｜公职人员减免50%，交物业费也分三六九等？](/articles/cdt/336698.md)
 
 9-30 [老斯基财经｜就在10000点会师，胜利大会师](/articles/cdt/336699.md)
-
-9-30 [基本常识｜150亿？可能是中国水分含量最高的昭通苹果](/articles/cdt/336702.md)
 
