--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-10 [黎巴嫩官员说，以色列袭击黎巴嫩城镇，打死20多人](/articles/voa/1011159.md)
+
 11-10 [加沙哀悼在以色列袭击中丧生的儿童，死亡人数同时上升](/articles/voa/1011160.md)
 
 11-10 [俄乌相互空袭不断，拜登政府赶在特朗普就职前加快给基辅交付军援](/articles/voa/1011161.md)
@@ -598,6 +600,4 @@
 10-29 [美韩即将举行高层会谈，密切关注朝鲜出兵援俄问题](/articles/voa/1011457.md)
 
 10-29 [美国投票箱遭受攻击；国土安全部警告“加剧、动态变化”的威胁环境](/articles/voa/1011458.md)
-
-10-29 [联合国工作小组抨击越南非法逮捕记者](/articles/voa/1011459.md)
 
