--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-10 [普京将俄罗斯与朝鲜的共同防御条约签署成法律](/articles/voa/1011158.md)
+
 11-10 [黎巴嫩官员说，以色列袭击黎巴嫩城镇，打死20多人](/articles/voa/1011159.md)
 
 11-10 [加沙哀悼在以色列袭击中丧生的儿童，死亡人数同时上升](/articles/voa/1011160.md)
@@ -598,6 +600,4 @@
 10-29 [香港特首施政报告提出“简朴房”政策，机构质疑能否真正解决劏房问题](/articles/voa/1011456.md)
 
 10-29 [美韩即将举行高层会谈，密切关注朝鲜出兵援俄问题](/articles/voa/1011457.md)
-
-10-29 [美国投票箱遭受攻击；国土安全部警告“加剧、动态变化”的威胁环境](/articles/voa/1011458.md)
 
