--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-10 [“反美斗士”司马南传遭禁言一年 环时前总编胡锡进重返社媒](/articles/voa/1011156.md)
+
 11-10 [加州和新泽西州的消防人员扑灭野火取得进展](/articles/voa/1011157.md)
 
 11-10 [普京将俄罗斯与朝鲜的共同防御条约签署成法律](/articles/voa/1011158.md)
@@ -598,6 +600,4 @@
 10-29 [联合国安理会成员敦促以色列和伊朗保持克制](/articles/voa/1011454.md)
 
 10-29 [美官员：中俄和古巴散布有关飓风的虚假信息](/articles/voa/1011455.md)
-
-10-29 [香港特首施政报告提出“简朴房”政策，机构质疑能否真正解决劏房问题](/articles/voa/1011456.md)
 
