--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-10 [特朗普宣布将蓬佩奥和黑利排除在新内阁之外](/articles/dw/1023740.md)
+
 11-10 [特朗普又来了！德国民众：他当选对德国是灾难](/articles/dw/1023741.md)
 
 11-10 [调研：德国人比去年更幸福](/articles/dw/1023742.md)
@@ -598,6 +600,4 @@
 10-11 [中国和越南将签署更多新协议](/articles/dw/1024038.md)
 
 10-11 [特朗普与普京：关系比想象中更为密切？](/articles/dw/1024039.md)
-
-10-11 [长平漫游：我们的读书小组](/articles/dw/1024040.md)
 
