--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-10 [中国政府公布“黄岩岛领海基线”中菲主权冲突可能会升级](/articles/dw/1023738.md)
+
 11-10 [亚利桑那州计票九成  特朗普全胜七个摇摆州](/articles/dw/1023739.md)
 
 11-10 [特朗普宣布将蓬佩奥和黑利排除在新内阁之外](/articles/dw/1023740.md)
@@ -598,6 +600,4 @@
 10-11 [肖尔茨会晤泽连斯基 德国同伙伴一道再增援14亿欧元](/articles/dw/1024036.md)
 
 10-11 [欧盟就“非法产品销售“问题向Temu提出问询](/articles/dw/1024037.md)
-
-10-11 [中国和越南将签署更多新协议](/articles/dw/1024038.md)
 
