--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-10 [中国的西红柿培训项目给肯尼亚带来机遇，也引发一些担忧](/articles/voa/1011148.md)
+
+11-10 [原声带·许微其：超级大国想要消灭我](/articles/voa/1011149.md)
+
 11-10 [欧盟大使称无意与北京打贸易战 旨在寻求公平透明的竞争](/articles/voa/1011150.md)
 
 11-10 [COP29气候变迁大会于阿塞拜疆登场 塔利班政府首次参与](/articles/voa/1011151.md)
@@ -596,8 +600,4 @@
 10-29 [专家预测：今年四季度中国制造业依然在荣枯线左右徘徊](/articles/voa/1011446.md)
 
 10-29 [一名在华韩国人因涉嫌间谍罪被捕，成为首位被控触犯新版《反间谍法》的韩国人](/articles/voa/1011447.md)
-
-10-29 [预计北京下周增发逾十万亿元新债券，美大选结果将决定债券最后规模](/articles/voa/1011448.md)
-
-10-29 [报复西方限制中国获取尖端芯片及技术，北京进一步收紧对稀土产业管控](/articles/voa/1011449.md)
 
