--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-10 [路透：美国政府下令台积电停止向中国供应先进人工智能芯片](/articles/voa/1011147.md)
+
 11-10 [中国的西红柿培训项目给肯尼亚带来机遇，也引发一些担忧](/articles/voa/1011148.md)
 
 11-10 [原声带·许微其：超级大国想要消灭我](/articles/voa/1011149.md)
@@ -598,6 +600,4 @@
 10-30 [黎巴嫩真主党领袖命丧以军空袭后，二号人物成为最高领导人](/articles/voa/1011445.md)
 
 10-29 [专家预测：今年四季度中国制造业依然在荣枯线左右徘徊](/articles/voa/1011446.md)
-
-10-29 [一名在华韩国人因涉嫌间谍罪被捕，成为首位被控触犯新版《反间谍法》的韩国人](/articles/voa/1011447.md)
 
