--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-11 [北京公布南中国海争议岛屿领海基线，并称反对菲律宾颁布《海洋区域法》](/articles/voa/1011145.md)
+
 11-11 [英国：俄军在乌克兰遭受伤亡最惨重的一个月](/articles/voa/1011146.md)
 
 11-10 [路透：美国政府下令台积电停止向中国供应先进人工智能芯片](/articles/voa/1011147.md)
@@ -598,6 +600,4 @@
 10-30 [世界媒体看中国：政策折腾下的经济](/articles/voa/1011443.md)
 
 10-30 [朝军援俄的连锁反应：乌韩加强合作，美国取消对乌使用美国武器的限制](/articles/voa/1011444.md)
-
-10-30 [黎巴嫩真主党领袖命丧以军空袭后，二号人物成为最高领导人](/articles/voa/1011445.md)
 
