--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-11 [乌克兰用34架无人机对莫斯科发动最大规模的袭击](/articles/voa/1011140.md)
+
+11-11 [加州开心果树种植面积扩大 大部分销往中国](/articles/voa/1011141.md)
+
+11-11 [以色列空袭黎巴嫩和加沙打死几十人](/articles/voa/1011142.md)
+
 11-11 [纽约州公园雇员在灭火时身亡，纽约和新泽西州发布空气质量警告](/articles/voa/1011143.md)
 
 11-11 [特朗普在美国总统大选中获得压倒性胜利](/articles/voa/1011144.md)
@@ -594,10 +600,4 @@
 10-30 [支联会国安案邹幸彤申吾尔开希等海外证人视像作供被拒 质疑当局修例针对](/articles/voa/1011438.md)
 
 10-30 [日本重启在严重毁坏福岛核电站的地震中幸存的核反应堆](/articles/voa/1011439.md)
-
-10-30 [聿文视界：地方官员遇害案频出，中国基层治理的失败](/articles/voa/1011440.md)
-
-10-30 [意大利番茄酱巨头呼吁欧盟抵制新疆进口，引发贸易与人权讨论](/articles/voa/1011441.md)
-
-10-30 [马斯克支持特朗普，中国商人政治沉默，两国企业家的不同命运](/articles/voa/1011442.md)
 
