--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-11 [拜登将游说特朗普不要放弃乌克兰](/articles/voa/1011139.md)
+
 11-11 [乌克兰用34架无人机对莫斯科发动最大规模的袭击](/articles/voa/1011140.md)
 
 11-11 [加州开心果树种植面积扩大 大部分销往中国](/articles/voa/1011141.md)
@@ -598,6 +600,4 @@
 10-30 [据报道习近平要求拜登修改台湾政策措辞，白宫重申“一个中国”政策](/articles/voa/1011437.md)
 
 10-30 [支联会国安案邹幸彤申吾尔开希等海外证人视像作供被拒 质疑当局修例针对](/articles/voa/1011438.md)
-
-10-30 [日本重启在严重毁坏福岛核电站的地震中幸存的核反应堆](/articles/voa/1011439.md)
 
