--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-11 [台积电将停止向中国出口最先进芯片](/articles/nyt/1042223.md)
+
 11-11 [特朗普重返白宫将如何搅动台海局势](/articles/nyt/1042224.md)
 
 11-8 [中国公布10万亿元刺激计划，为地方政府纾困](/articles/nyt/1042225.md)
@@ -598,6 +600,4 @@
 8-1 [外国网红游客，中国宣传机构的“互联网嘴替”？](/articles/nyt/1042521.md)
 
 8-1 [外国人到中国旅游是一种什么样的体验](/articles/nyt/1042522.md)
-
-7-31 [药检阳性归咎于食品污染即可免责？反兴奋剂机构展开调查](/articles/nyt/1042523.md)
 
