--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-11 [德国总理朔尔茨愿提早举行议会信任投票](/articles/voa/1011138.md)
+
 11-11 [拜登将游说特朗普不要放弃乌克兰](/articles/voa/1011139.md)
 
 11-11 [乌克兰用34架无人机对莫斯科发动最大规模的袭击](/articles/voa/1011140.md)
@@ -598,6 +600,4 @@
 10-30 [欧盟将于周四前对从中国进口的电动汽车加征关税](/articles/voa/1011436.md)
 
 10-30 [据报道习近平要求拜登修改台湾政策措辞，白宫重申“一个中国”政策](/articles/voa/1011437.md)
-
-10-30 [支联会国安案邹幸彤申吾尔开希等海外证人视像作供被拒 质疑当局修例针对](/articles/voa/1011438.md)
 
