--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-11 [特朗普为什么会赢？西方民主的叙事已经崩溃](/articles/nyt/1042221.md)
+
 11-11 [“中国政府最可怕的噩梦”：韩东方的劳工维权之路](/articles/nyt/1042222.md)
 
 11-11 [台积电将停止向中国出口最先进芯片](/articles/nyt/1042223.md)
@@ -598,6 +600,4 @@
 8-1 [中国不开一枪就能控制南海](/articles/nyt/1042519.md)
 
 8-1 [中国拟推行“网络身份证”，保护隐私还是加强监控？](/articles/nyt/1042520.md)
-
-8-1 [外国网红游客，中国宣传机构的“互联网嘴替”？](/articles/nyt/1042521.md)
 
