--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-11 [联合国气候峰会：补偿多少才是公正？](/articles/dw/1023734.md)
+
 11-11 [向川普釋訊號？「拜習會」最終場傳APEC登場](/articles/dw/1023735.md)
 
 11-10 [美国南卡罗来纳州：数十只猴子仍在逃亡](/articles/dw/1023736.md)
@@ -598,6 +600,4 @@
 10-12 [中国财政部记者会无惊喜 专家：措施缺乏具体数字令部分投资人失望](/articles/dw/1024032.md)
 
 10-12 [客座评论：残雪、韩江与诺贝尔文学奖](/articles/dw/1024033.md)
-
-10-11 [联合国驻黎巴嫩部队遭以军袭击 – 各方如何回应？](/articles/dw/1024034.md)
 
