--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-11 [聿文视界：特朗普2.0对北京会是“噩梦”吗？](/articles/voa/1011132.md)
+
+11-11 [台湾商人曹兴诚提告中国官员 反击中国制裁](/articles/voa/1011133.md)
+
 11-11 [越南市场受阻 中国电商Temu与Shein需向政府注册否则将被禁](/articles/voa/1011134.md)
 
 11-11 [特朗普施压参院共和党领袖候选人同意迅速认可其内阁人选](/articles/voa/1011135.md)
@@ -596,8 +600,4 @@
 10-30 [美国总统大选倒计时一周，哈里斯和特朗普相互攻击](/articles/voa/1011430.md)
 
 10-30 [美国欢迎中印降低边界紧张局势的努力](/articles/voa/1011431.md)
-
-10-30 [五角大楼称一些朝鲜部队现身库尔斯克战场](/articles/voa/1011432.md)
-
-10-30 [泰国利用赌场提振经济，但风险仍存](/articles/voa/1011433.md)
 
