--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,11 +3,19 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-11 [阿罗汉不约｜允许再多借一点](/articles/cdt/335611.md)
+
+11-11 [老萧杂说｜面对大学生扎堆骑行，我们应当思考些什么](/articles/cdt/335613.md)
+
+11-11 [【404文库】大象公社｜你没看错，临时出门证制度回来了……](/articles/cdt/335616.md)
+
 11-11 [【404文库】成都客｜开封，2024年深秋的首都](/articles/cdt/335621.md)
 
 11-11 [【404文库】基本常识｜熟悉的操作一秒回归！河南工程学院启用临时出门证](/articles/cdt/335624.md)
 
 11-11 [建设性意见｜大学生，向何处去？](/articles/cdt/335626.md)
+
+11-11 [【CDT报告汇】“大外宣”记者：全球数字平台更多发布自由，但失去了在国内平台享有的特权（外二篇）](/articles/cdt/335634.md)
 
 11-10 [每日一语 2024.11.9](/articles/cdt/335637.md)
 
@@ -592,12 +600,4 @@
 10-2 [家传研究员｜昨夜入沪杀三人，当大城市成为泄愤目标……](/articles/cdt/336661.md)
 
 10-2 [走读新生｜这些事透露的信号，老百姓再不警觉就危险了](/articles/cdt/336662.md)
-
-10-2 [【网络民议】女子“造谣”下雪被抓，网友：天气预报不准可不可以刑拘](/articles/cdt/336663.md)
-
-10-1 [常识流通处｜“准备70W满仓干”；“建议留3000，到时跑外卖需要一辆电动车”](/articles/cdt/336667.md)
-
-10-1 [天涯行路｜女子“造谣”下雪被抓，挺吓人的](/articles/cdt/336669.md)
-
-10-1 [剑客写字的地方｜上海沃尔玛随机砍人的事情，要看到一些教训](/articles/cdt/336670.md)
 
