--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-11 [特朗普胜选后 台湾的期待与焦虑](/articles/dw/1023732.md)
+
+11-11 [克宫辟谣：有关特朗普与普京通话的报道“纯属虚构”](/articles/dw/1023733.md)
+
 11-11 [联合国气候峰会：补偿多少才是公正？](/articles/dw/1023734.md)
 
 11-11 [向川普釋訊號？「拜習會」最終場傳APEC登場](/articles/dw/1023735.md)
@@ -596,8 +600,4 @@
 10-12 [支援乌克兰：法国的幻影战机能起多大作用？](/articles/dw/1024030.md)
 
 10-12 [解码中国：德国外长与北京打交道时的麻烦](/articles/dw/1024031.md)
-
-10-12 [中国财政部记者会无惊喜 专家：措施缺乏具体数字令部分投资人失望](/articles/dw/1024032.md)
-
-10-12 [客座评论：残雪、韩江与诺贝尔文学奖](/articles/dw/1024033.md)
 
