--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-11 [日本众院选举 石破茂得以留任](/articles/dw/1023729.md)
+
+11-11 [媒体称台湾拟向美大量军购 总统府：无新一阶段讨论](/articles/dw/1023730.md)
+
 11-11 [一个或将离任 一个即将上任：肖尔茨和特朗普通电话](/articles/dw/1023731.md)
 
 11-11 [特朗普胜选后 台湾的期待与焦虑](/articles/dw/1023732.md)
@@ -596,8 +600,4 @@
 10-13 [賴清德國慶演說：盼中國和台灣一起承擔國際責任，維護區域安全](/articles/dw/1024027.md)
 
 10-13 [世界誠信城市丹麥 拿貨付錢自己來](/articles/dw/1024028.md)
-
-10-12 [赖清德双十演说后 中国或对台湾实施经济施压](/articles/dw/1024029.md)
-
-10-12 [支援乌克兰：法国的幻影战机能起多大作用？](/articles/dw/1024030.md)
 
