--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-12 [台湾启动对美大规模军购谈判？台总统府称目前尚无新一阶段讨论](/articles/voa/1011124.md)
+
+11-12 [曹兴诚状告国台办宋涛、陈斌华恐吓，反制“台独”黑名单惩戒](/articles/voa/1011125.md)
+
+11-12 [台湾结束对真主党传呼机爆炸事件调查，认定涉案传呼机不是台湾公司生产](/articles/voa/1011126.md)
+
 11-12 [石破茂赢得众议院首相选举投票，弱势施政前景艰难](/articles/voa/1011127.md)
 
 11-11 [夜骑开封触动维稳神经，河南高校紧急叫停封校降温](/articles/voa/1011128.md)
@@ -594,10 +600,4 @@
 10-30 [印太地区进入“新导弹时代” 澳大利亚将加大导弹生产](/articles/voa/1011422.md)
 
 10-30 [字节跳动创始人登顶中国富豪榜 但亿万富翁总财富普遍缩水](/articles/voa/1011423.md)
-
-10-30 [中国发射神舟十九号飞船 向空间站派遣新航天员乘组](/articles/voa/1011424.md)
-
-10-30 [欧盟对中国电动汽车加征关税 引发北京不满](/articles/voa/1011425.md)
-
-10-30 [英外相拉米访华引议会质询，坦言聚焦人权和制裁问题](/articles/voa/1011426.md)
 
