--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-12 [自大选输给特朗普以来，哈里斯与拜登首次共同露面纪念退伍军人节](/articles/voa/1011120.md)
+
+11-12 [旅美维吾尔人在特朗普大选获胜后敦促美国采取更强硬的措施应对中国的新疆政策](/articles/voa/1011121.md)
+
+11-12 [帕劳总统在试图应对美中竞争中赢得第二任期](/articles/voa/1011122.md)
+
 11-12 [印度加强钢铁进口管控，严防中国低价钢材冲击本土市场](/articles/voa/1011123.md)
 
 11-12 [台湾启动对美大规模军购谈判？台总统府称目前尚无新一阶段讨论](/articles/voa/1011124.md)
@@ -594,10 +600,4 @@
 10-30 [北京十万亿刺激计划引争议，专家:对经济的作用止痛大于助推](/articles/voa/1011418.md)
 
 10-30 [王毅会见俄副外长，侵乌战争是重点话题](/articles/voa/1011419.md)
-
-10-30 [普京如何看待在哈里斯和特朗普之间的选择？](/articles/voa/1011420.md)
-
-10-30 [朝鲜可能在美国大选前后试射洲际弹道导弹](/articles/voa/1011421.md)
-
-10-30 [印太地区进入“新导弹时代” 澳大利亚将加大导弹生产](/articles/voa/1011422.md)
 
