--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-12 [特朗普任命“边境沙皇”领导驱逐无证移民行动](/articles/voa/1011118.md)
+
+11-12 [特朗普提名斯特凡尼克众议员出任美国驻联合国大使](/articles/voa/1011119.md)
+
 11-12 [自大选输给特朗普以来，哈里斯与拜登首次共同露面纪念退伍军人节](/articles/voa/1011120.md)
 
 11-12 [旅美维吾尔人在特朗普大选获胜后敦促美国采取更强硬的措施应对中国的新疆政策](/articles/voa/1011121.md)
@@ -596,8 +600,4 @@
 10-30 [朝鲜外相将在莫斯科会晤俄罗斯外长，进行“战略磋商”](/articles/voa/1011416.md)
 
 10-30 [俄乌战争局势突变，基辅宣布新一轮军事动员征召16万军人](/articles/voa/1011417.md)
-
-10-30 [北京十万亿刺激计划引争议，专家:对经济的作用止痛大于助推](/articles/voa/1011418.md)
-
-10-30 [王毅会见俄副外长，侵乌战争是重点话题](/articles/voa/1011419.md)
 
