--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+11-12 [美国打击叙利亚境内与伊朗有关的目标](/articles/voa/1011114.md)
+
+11-12 [著名废奴主义者塔布曼在退伍军人节被追授将军衔。](/articles/voa/1011115.md)
+
+11-12 [马斯克在美国政坛影响力大增，他在中国议题上说过哪些话？](/articles/voa/1011116.md)
+
+11-12 [印尼:尽管与中国签署了联合协议，但在南中国海没有与中国重叠的主权声索](/articles/voa/1011117.md)
+
 11-12 [特朗普任命“边境沙皇”领导驱逐无证移民行动](/articles/voa/1011118.md)
 
 11-12 [特朗普提名斯特凡尼克众议员出任美国驻联合国大使](/articles/voa/1011119.md)
@@ -592,12 +600,4 @@
 10-31 [美国在新行动中对俄罗斯躲避制裁进行打击 制裁公司中包括中国大陆和香港公司](/articles/voa/1011412.md)
 
 10-31 [美军空袭叙利亚多处地点，打死“伊斯兰国”武装分子或多达35人](/articles/voa/1011413.md)
-
-10-31 [印度军方：印中已经完成从边境争议地区最后两个对峙点后撤行动](/articles/voa/1011414.md)
-
-10-31 [分析：北京面对平壤派兵助俄处境尴尬，既恼怒又恐慌](/articles/voa/1011415.md)
-
-10-30 [朝鲜外相将在莫斯科会晤俄罗斯外长，进行“战略磋商”](/articles/voa/1011416.md)
-
-10-30 [俄乌战争局势突变，基辅宣布新一轮军事动员征召16万军人](/articles/voa/1011417.md)
 
