--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-12 [《纽约时报》报道：特朗普选择鲁比奥参议员出任国务卿](/articles/voa/1011111.md)
+
 11-12 [报道：特朗普邀请对中国持鹰派立场的迈克·沃尔兹众议员出任国家安全顾问](/articles/voa/1011112.md)
 
 11-12 [年轻的黑人和拉丁裔男性：选择特朗普是因为经济和就业](/articles/voa/1011113.md)
@@ -598,6 +600,4 @@
 10-31 [真主党新领导人誓言继续与以色列作战](/articles/voa/1011409.md)
 
 10-31 [美财政部：将与台湾展开全面税务谈判避免双重课税](/articles/voa/1011410.md)
-
-10-31 [香港高才通计划欲“抢人才” “高才”入港后却一职难求](/articles/voa/1011411.md)
 
