--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-12 [万人夜骑开封：一场迅速被叫停的青春狂欢](/articles/nyt/1042219.md)
+
 11-12 [特朗普对华贸易战2.0版将有何不同](/articles/nyt/1042220.md)
 
 11-11 [特朗普为什么会赢？西方民主的叙事已经崩溃](/articles/nyt/1042221.md)
@@ -598,6 +600,4 @@
 8-2 [哈尼耶被暗杀细节曝光：爆炸装置两个月前被偷运至其客房](/articles/nyt/1042517.md)
 
 8-1 [真主党哈马斯领导人相继遇袭，中东会爆发更大规模战争吗](/articles/nyt/1042518.md)
-
-8-1 [中国不开一枪就能控制南海](/articles/nyt/1042519.md)
 
