--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-12 [用人唯「忠」 川普新政府公布了哪些人選？](/articles/dw/1023728.md)
+
 11-11 [日本众院选举 石破茂得以留任](/articles/dw/1023729.md)
 
 11-11 [媒体称台湾拟向美大量军购 总统府：无新一阶段讨论](/articles/dw/1023730.md)
@@ -598,6 +600,4 @@
 10-13 [不满匈牙利俄中政策  冯德莱恩与欧尔班唇枪舌战](/articles/dw/1024026.md)
 
 10-13 [賴清德國慶演說：盼中國和台灣一起承擔國際責任，維護區域安全](/articles/dw/1024027.md)
-
-10-13 [世界誠信城市丹麥 拿貨付錢自己來](/articles/dw/1024028.md)
 
