--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-12 [中国经济放缓 “双十一”荣景不再](/articles/voa/1011109.md)
+
 11-12 [第一只抵达澳大利亚的帝企鹅在旅游地海滩被发现](/articles/voa/1011110.md)
 
 11-12 [《纽约时报》报道：特朗普选择鲁比奥参议员出任国务卿](/articles/voa/1011111.md)
@@ -598,6 +600,4 @@
 10-31 [美司法部：包括中国公民在内的两名跨国洗钱组织成员承认将数千万美元的贩毒收益进行洗钱](/articles/voa/1011407.md)
 
 10-31 [消费者支出强劲，美国经济上季度稳步增长2.8%](/articles/voa/1011408.md)
-
-10-31 [真主党新领导人誓言继续与以色列作战](/articles/voa/1011409.md)
 
