--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-12 [长平观察：既怕他们“举纸”优雅，又怕他们“骑行”怪状](/articles/dw/1023727.md)
+
 11-12 [用人唯「忠」 川普新政府公布了哪些人選？](/articles/dw/1023728.md)
 
 11-11 [日本众院选举 石破茂得以留任](/articles/dw/1023729.md)
@@ -598,6 +600,4 @@
 10-13 [客座评论：如何判断习近平的下一步经济政策](/articles/dw/1024025.md)
 
 10-13 [不满匈牙利俄中政策  冯德莱恩与欧尔班唇枪舌战](/articles/dw/1024026.md)
-
-10-13 [賴清德國慶演說：盼中國和台灣一起承擔國際責任，維護區域安全](/articles/dw/1024027.md)
 
