--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-12 [新西兰领导人向国家和宗教照护机构的虐待受害者正式道歉](/articles/voa/1011107.md)
+
 11-12 [波兰总统呼吁美国继续致力于欧洲安全](/articles/voa/1011108.md)
 
 11-12 [中国经济放缓 “双十一”荣景不再](/articles/voa/1011109.md)
@@ -598,6 +600,4 @@
 10-31 [中国钢铁厂投资津巴布韦，经济福祉还是环境噩梦？](/articles/voa/1011405.md)
 
 10-31 [法国允许六名俄军逃兵及伴侣入境申请庇护](/articles/voa/1011406.md)
-
-10-31 [美司法部：包括中国公民在内的两名跨国洗钱组织成员承认将数千万美元的贩毒收益进行洗钱](/articles/voa/1011407.md)
 
