--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-12 [笔墨写自由：为大都会博物馆“写大字”的台湾书法家](/articles/nyt/1042217.md)
+
 11-12 [挺川vs.反川，中国民主倡导人士因特朗普分裂](/articles/nyt/1042218.md)
 
 11-12 [万人夜骑开封：一场迅速被叫停的青春狂欢](/articles/nyt/1042219.md)
@@ -598,6 +600,4 @@
 8-2 [记者格什科维奇：被俄罗斯囚禁的苏联流亡者之子](/articles/nyt/1042515.md)
 
 8-2 [俄罗斯与西方国家进行冷战后最大规模换囚](/articles/nyt/1042516.md)
-
-8-2 [哈尼耶被暗杀细节曝光：爆炸装置两个月前被偷运至其客房](/articles/nyt/1042517.md)
 
