--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-12 [俄高官告诉王毅：俄中应反制美国的遏制企图](/articles/voa/1011105.md)
+
 11-12 [荷兰电车遭纵火，以色列球迷遇袭后阿姆斯特丹局势紧张](/articles/voa/1011106.md)
 
 11-12 [新西兰领导人向国家和宗教照护机构的虐待受害者正式道歉](/articles/voa/1011107.md)
@@ -598,6 +600,4 @@
 10-31 [为了争取自身权益德州华人在政治上越来越活跃：积极助选，踊跃投票](/articles/voa/1011403.md)
 
 10-31 [为了保护自身权益德州华人在政治上越来越活跃：积极助选，踊跃投票](/articles/voa/1011404.md)
-
-10-31 [中国钢铁厂投资津巴布韦，经济福祉还是环境噩梦？](/articles/voa/1011405.md)
 
