--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-12 [调查：卫星图像显示中国为制造核动力航母做准备](/articles/dw/1023724.md)
+
+11-12 [德国预计将于明年2月提前大选](/articles/dw/1023725.md)
+
 11-12 [绍伊古会王毅：中俄须对抗美国“围堵”](/articles/dw/1023726.md)
 
 11-12 [长平观察：既怕他们“举纸”优雅，又怕他们“骑行”怪状](/articles/dw/1023727.md)
@@ -596,8 +600,4 @@
 10-13 [喀山金砖峰会将临，印度如何制衡中国？](/articles/dw/1024022.md)
 
 10-13 [德国药品短缺问题严重：为什么会这样？](/articles/dw/1024023.md)
-
-10-13 [日本公民在华屡屡被袭引发安全担忧](/articles/dw/1024024.md)
-
-10-13 [客座评论：如何判断习近平的下一步经济政策](/articles/dw/1024025.md)
 
