--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-12 [老萧杂说｜对集体骑行一禁了之，莫如来一场当代版“潘晓讨论”](/articles/cdt/335580.md)
+
+11-12 [匿名网友｜珠海体育中心撞人事件发生后，我的妈妈被推进了重症监护室](/articles/cdt/335584.md)
+
+11-12 [【404文库】图拉的精神食粮｜珠海市体育中心撞人事件幸存者：有人脚断了，有人撞吐血了，看着很恐怖](/articles/cdt/335594.md)
+
 11-12 [每日一语 2024.11.10](/articles/cdt/335596.md)
 
 11-12 [每日一语 2024.11.11](/articles/cdt/335599.md)
@@ -594,10 +600,4 @@
 10-3 [知灼｜出席国庆招待会的老同志](/articles/cdt/336631.md)
 
 10-3 [每日一语 2024.10.2](/articles/cdt/336633.md)
-
-10-3 [基本常识｜中国男子持刀袭击瑞士托儿所捅伤3个孩子，震撼全球媒体](/articles/cdt/336638.md)
-
-10-3 [张三丰的世界｜“泄愤”时代，普通人如何自处](/articles/cdt/336640.md)
-
-10-2 [老干体v｜谁会被打成「侵犯民营企业家」的反面典型？](/articles/cdt/336651.md)
 
