--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-12 [中国广东珠海恶意驾车冲撞事件令人惊骇，35死43伤](/articles/voa/1011102.md)
+
+11-12 [菲律宾：中国加大压力，迫使其放弃在南中国海的主权要求](/articles/voa/1011103.md)
+
+11-12 [布林肯前往布鲁塞尔，讨论推动“激增”对乌军事援助](/articles/voa/1011104.md)
+
 11-12 [俄高官告诉王毅：俄中应反制美国的遏制企图](/articles/voa/1011105.md)
 
 11-12 [荷兰电车遭纵火，以色列球迷遇袭后阿姆斯特丹局势紧张](/articles/voa/1011106.md)
@@ -594,10 +600,4 @@
 10-31 [中俄加深南极合作，封阻海洋保育提议](/articles/voa/1011400.md)
 
 10-31 [密歇根州对一名非法投票的非美国公民提出刑事指控，据报道此人为中国留学生](/articles/voa/1011401.md)
-
-10-31 [中国警告说，对中国国民的威胁妨碍在巴基斯坦的“一带一路”投资](/articles/voa/1011402.md)
-
-10-31 [为了争取自身权益德州华人在政治上越来越活跃：积极助选，踊跃投票](/articles/voa/1011403.md)
-
-10-31 [为了保护自身权益德州华人在政治上越来越活跃：积极助选，踊跃投票](/articles/voa/1011404.md)
 
