--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-12 [基本常识｜有没有可能，及时化解矛盾的思路就是累积矛盾的源头？](/articles/cdt/335578.md)
+
 11-12 [老萧杂说｜对集体骑行一禁了之，莫如来一场当代版“潘晓讨论”](/articles/cdt/335580.md)
 
 11-12 [匿名网友｜珠海体育中心撞人事件发生后，我的妈妈被推进了重症监护室](/articles/cdt/335584.md)
@@ -598,6 +600,4 @@
 10-3 [陶舜财经｜“你们穿和服上街不怕被打吗？”](/articles/cdt/336630.md)
 
 10-3 [知灼｜出席国庆招待会的老同志](/articles/cdt/336631.md)
-
-10-3 [每日一语 2024.10.2](/articles/cdt/336633.md)
 
