--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-13 [北约秘书长警告俄与中国伊朗朝鲜合作正威胁欧洲、印太和北美](/articles/voa/1011097.md)
+
 11-13 [欧央行关注美国贸易政策，警告欧洲必须做好应对关税战的准备](/articles/voa/1011098.md)
 
 11-13 [疫苗维权先驱成阶下囚，何方美以重婚罪被判刑五年六个月](/articles/voa/1011099.md)
@@ -598,6 +600,4 @@
 10-31 [朝鲜发射旨在打击美国的远程导弹 美韩将以“战略武器”参与之联合演习回应](/articles/voa/1011395.md)
 
 10-31 [强台“康妮”来袭 全台停摆并预警撤离8,600人](/articles/voa/1011396.md)
-
-10-31 [香港反修例运动五周年：未决案件成焦点，政府拒绝‘划线’免追究](/articles/voa/1011397.md)
 
