--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-13 [“特朗普2.0”将至 分析: 中国或强化近邻外交应对美中关系的“急风骤雨”](/articles/voa/1011095.md)
+
 11-13 [特朗普“搓澡舞”风靡中国：中国人寄自由希望于美国身上？](/articles/voa/1011096.md)
 
 11-13 [北约秘书长警告俄与中国伊朗朝鲜合作正威胁欧洲、印太和北美](/articles/voa/1011097.md)
@@ -598,6 +600,4 @@
 10-31 [奥斯汀曝朝鲜军队着俄罗斯制服正前往乌克兰 韩防长忧朝鲜半岛威胁升级](/articles/voa/1011393.md)
 
 10-31 [中国10月官方制造业PMI为50.1 睽违半年重回扩张区间](/articles/voa/1011394.md)
-
-10-31 [朝鲜发射旨在打击美国的远程导弹 美韩将以“战略武器”参与之联合演习回应](/articles/voa/1011395.md)
 
