--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-13 [泄露乌克兰战争军事机密的美空军国民警卫队员特谢拉被判监禁15年](/articles/voa/1011082.md)
+
+11-13 [美国不会因加沙援助问题削减对以色列的军援](/articles/voa/1011083.md)
+
+11-13 [特朗普提名南达科他州长诺姆出任国土安全部长](/articles/voa/1011084.md)
+
 11-13 [特朗普任命马斯克与拉马斯瓦米领导削减和重组政府机构的努力](/articles/voa/1011085.md)
 
 11-13 [特朗普提名军人出身的福克斯新闻台主持人海格塞斯出任国防部长](/articles/voa/1011086.md)
@@ -594,10 +600,4 @@
 11-1 [新报告：中国显示器行业崛起有可能损害美国国家安全](/articles/voa/1011380.md)
 
 11-1 [中国酒店业开始内卷 “双十一”掀价格割喉战](/articles/voa/1011381.md)
-
-11-1 [日本将与欧盟签署安全伙伴协议 协调对抗中国](/articles/voa/1011382.md)
-
-11-1 [巴基斯坦称中国大使就中方人员安全问题的批评言论“令人费解”](/articles/voa/1011383.md)
-
-11-1 [中国电动车称霸印尼 将造成依赖与污染双重危机？](/articles/voa/1011384.md)
 
