--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-13 [印度尼西亚总统白宫晤拜登 与特朗普通电话 推动两国合作](/articles/voa/1011079.md)
+
 11-13 [美众议员沃尔兹被特朗普选为国安顾问 曾提《台湾防卫法》](/articles/voa/1011080.md)
 
 11-13 [歼-35珠海航展亮相—中国隐形战机步入双机时代 专家：飞行员实战短板难超越美国](/articles/voa/1011081.md)
@@ -598,6 +600,4 @@
 11-1 [专家：缅甸人对中国的反感情绪有升高趋势](/articles/voa/1011377.md)
 
 11-1 [美无人机制造商：中国的制裁将打击供应链](/articles/voa/1011378.md)
-
-11-1 [中东战火继续在多处战线燃烧，造成至少16人丧生](/articles/voa/1011379.md)
 
