--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+11-13 [特朗普当选是“女权倒退”吗？有些女性并不同意](/articles/nyt/1042213.md)
+
+11-13 [从新保守主义到“美国优先”：特朗普的外交团队选择](/articles/nyt/1042214.md)
+
 11-13 [“每个人都想要现金”：为何有钱人纷纷抛售香港豪宅](/articles/nyt/1042215.md)
 
 11-13 [珠海体育中心汽车冲撞人群事件造成35人死亡](/articles/nyt/1042216.md)
@@ -596,8 +600,4 @@
 8-5 [走私、幕后交易和假标签：中国如何规避美国人工智能禁令](/articles/nyt/1042511.md)
 
 8-5 [试图在中国大使馆外引爆爆炸物的美国律师认罪](/articles/nyt/1042512.md)
-
-8-2 [从“改革一代”到“习近平一代”：何伟看到的中国](/articles/nyt/1042513.md)
-
-8-2 [俄罗斯与西方换囚关键人物：普京最想要的是谁](/articles/nyt/1042514.md)
 
