--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-13 [川普新政府：馬斯克獲任命 前福斯主持人將任防長?](/articles/dw/1023719.md)
+
 11-13 [APEC峰會將登場：川普勝選帶來哪些變數？](/articles/dw/1023720.md)
 
 11-12 [泄密美国空军士兵遭求处17年监禁](/articles/dw/1023721.md)
@@ -598,6 +600,4 @@
 10-13 [台湾国防部：中国辽宁号航母编队驶入巴士海峡](/articles/dw/1024017.md)
 
 10-13 [路透社：中俄阻挠东亚峰会联合声明](/articles/dw/1024018.md)
-
-10-13 [中越总理举行会晤 双方签署十项合作协议](/articles/dw/1024019.md)
 
