--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-13 [美国航母参加与韩国和日本的军事演习](/articles/voa/1011077.md)
+
 11-13 [台湾的“鹰式”导弹可能已重新武装乌克兰](/articles/voa/1011078.md)
 
 11-13 [印度尼西亚总统白宫晤拜登 与特朗普通电话 推动两国合作](/articles/voa/1011079.md)
@@ -598,6 +600,4 @@
 11-1 [美国谴责中国将人权捍卫者余文生与许艳夫妇判处徒刑(声明全文)](/articles/voa/1011375.md)
 
 11-1 [欧盟对中国电动汽车加征关税背后有何玄机？](/articles/voa/1011376.md)
-
-11-1 [专家：缅甸人对中国的反感情绪有升高趋势](/articles/voa/1011377.md)
 
