--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-13 [【404文库】鸡蛋bot｜珠海市体育中心袭击事件背后](/articles/cdt/335533.md)
+
 11-13 [【404媒体】“等帘子拉开，模特已经换上了新衣”(外二篇）](/articles/cdt/335560.md)
 
 11-13 [每日一语 2024.11.12](/articles/cdt/335563.md)
@@ -598,6 +600,4 @@
 10-4 [每日一语 2024.10.4](/articles/cdt/336604.md)
 
 10-4 [单先生｜怎么可以蠢成这样呢？](/articles/cdt/336613.md)
-
-10-4 [日本物语｜日本成为中国游客国庆期间海外旅行的首选目的地](/articles/cdt/336615.md)
 
