--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -11,6 +11,8 @@
 
 11-13 [【404媒体】“等帘子拉开，模特已经换上了新衣”(外二篇）](/articles/cdt/335560.md)
 
+11-13 [【404文库】水瓶纪元｜珠海体育场凶案翌日](/articles/cdt/335561.md)
+
 11-13 [每日一语 2024.11.12](/articles/cdt/335563.md)
 
 11-13 [【404文库】衣者朝新｜我们需要知道更多，也有权知道更多](/articles/cdt/335566.md)
@@ -598,6 +600,4 @@
 10-5 [六神磊磊读金庸｜我们这是中了人家计了](/articles/cdt/336592.md)
 
 10-4 [念个咒语会下雨｜上海超市男子砍人前多日讨薪未果，抖音上218个视频记录“讨薪常态化”](/articles/cdt/336599.md)
-
-10-4 [【404文库】川江物语｜内塔尼亚胡喊话伊朗人民：我们是一伙的，哈梅内伊政权才是敌人](/articles/cdt/336601.md)
 
