--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-13 [台湾央行关注特朗普贸易政策可能给台湾带来的风险](/articles/voa/1011073.md)
+
 11-13 [特朗普的国防部长提名人选震惊五角大楼并引发质疑](/articles/voa/1011074.md)
 
 11-13 [帕劳总统赢得连任 指控中国蔑视海域边界](/articles/voa/1011075.md)
@@ -598,6 +600,4 @@
 11-1 [西班牙历经数十年最严重洪灾 死亡人数攀升至158人](/articles/voa/1011371.md)
 
 11-1 [美大选后中国将测试新总统对台海议题底线？专家：须寻求三方关系新平衡以避危机](/articles/voa/1011372.md)
-
-11-1 [美国：预计八千朝鲜士兵“未来几天”将在乌克兰投入作战行动](/articles/voa/1011373.md)
 
