--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-13 [欧盟需要担心与美国的贸易战吗？](/articles/dw/1023714.md)
+
+11-13 [为促生育 俄罗斯立法禁止宣传不生孩子](/articles/dw/1023715.md)
+
 11-13 [德国政府专机又双叒叕出故障：经济部长被困里斯本](/articles/dw/1023716.md)
 
 11-13 [被征召上战场的乌克兰囚犯](/articles/dw/1023717.md)
@@ -596,8 +600,4 @@
 10-14 [中國舉行「聯合利劍B」圍台軍演 稱震懾台獨](/articles/dw/1024012.md)
 
 10-13 [德媒：美国总统拜登下周将访德](/articles/dw/1024013.md)
-
-10-13 [蔡英文访问欧洲 英媒称伦敦之行被推迟](/articles/dw/1024014.md)
-
-10-13 [中国总理周一开始访巴行程 将出席上合组织会议](/articles/dw/1024015.md)
 
