--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-13 [与中国在南美的贸易战 特朗普已经输了？](/articles/dw/1023712.md)
+
+11-13 [BioNTech将斥巨资收购中国公司 以期推进抗癌药研发](/articles/dw/1023713.md)
+
 11-13 [欧盟需要担心与美国的贸易战吗？](/articles/dw/1023714.md)
 
 11-13 [为促生育 俄罗斯立法禁止宣传不生孩子](/articles/dw/1023715.md)
@@ -596,8 +600,4 @@
 10-14 [分析：中國「聯合利劍2024B」與過往有何差異？](/articles/dw/1024010.md)
 
 10-14 [加沙人在战争忍受逃亡和绝望](/articles/dw/1024011.md)
-
-10-14 [中國舉行「聯合利劍B」圍台軍演 稱震懾台獨](/articles/dw/1024012.md)
-
-10-13 [德媒：美国总统拜登下周将访德](/articles/dw/1024013.md)
 
