--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+11-14 [布林肯呼吁加沙战争“长时间暂停”以便增加对加沙居民的救援](/articles/voa/1011065.md)
+
+11-14 [特朗普取消“出生公民权”可能会有什么后果？](/articles/voa/1011066.md)
+
+11-14 [珠海撞人事件引发民众质疑与维稳措施：社会底层困境再受关注](/articles/voa/1011067.md)
+
+11-14 [特朗普和拜登在白宫会面，讨论权力移交](/articles/voa/1011068.md)
+
+11-14 [菲律宾政府态度转变，愿意配合国际刑事法院调查杜特尔特禁毒侵权案](/articles/voa/1011069.md)
+
 11-14 [韩国情报机关确认朝军在库尔斯克与乌军发生战斗](/articles/voa/1011070.md)
 
 11-14 [中国黑客侵入海外藏人社区网站，盗取信息情报监控藏人](/articles/voa/1011071.md)
@@ -590,14 +600,4 @@
 11-1 [“习近平”“胡锦涛”现身洛杉矶万圣节 声援上海等地被抓捕的年轻人](/articles/voa/1011363.md)
 
 11-1 [中国已开始为美国大选后双边贸易战重启做准备，谋求降低对美国农产品的依赖](/articles/voa/1011364.md)
-
-11-1 [中国环保官员：无论谁赢得美国大选，希望美国继续与别国在气候变化上合作](/articles/voa/1011365.md)
-
-11-1 [德国因处决双重国籍异议人士 将关闭伊朗领事馆](/articles/voa/1011366.md)
-
-11-1 [美国民意调查机构显示 格鲁吉亚议会选举存在“操纵”疑虑](/articles/voa/1011367.md)
-
-11-1 [路透社：中国研究人员基于Meta模型开发军用AI工具](/articles/voa/1011368.md)
-
-11-1 [中国海军首次在南中国海进行双航母编队演练](/articles/voa/1011369.md)
 
