--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+11-14 [中国重新译注《古兰经》引发争议：通过伊斯兰教本土化加强宗教干预？](/articles/voa/1011059.md)
+
+11-14 [特朗普提名参议员鲁比奥担任国务卿](/articles/voa/1011060.md)
+
+11-14 [特朗普宣布前众议员加巴德将出任国家情报总监](/articles/voa/1011061.md)
+
+11-14 [香港记协主席被《华尔街日报》“不合理解雇”后向港府投诉](/articles/voa/1011062.md)
+
 11-14 [美中贸易战2.0开打在即，中国将如何应战?](/articles/voa/1011063.md)
 
 11-14 [蒲黄榆说：从郑州夜骑到珠海撞人，中国人民找不到出路](/articles/voa/1011064.md)
@@ -592,12 +600,4 @@
 11-2 [巴基斯坦发生炸弹袭击事件，七人丧生](/articles/voa/1011357.md)
 
 11-2 [中共官员偷看禁书 厌恶洗脑 纪检严打 管控危机](/articles/voa/1011358.md)
-
-11-2 [观美选操盘？国际赌盘押宝特朗普 分析：他若胜选，美股行情恐短多长空](/articles/voa/1011359.md)
-
-11-2 [朝鲜外相：支持俄罗斯直到取得俄乌战争的胜利](/articles/voa/1011360.md)
-
-11-2 [摇摆州密西根选战激烈，电动汽车和来自中国的电动汽车成关键话题](/articles/voa/1011361.md)
-
-11-1 [台风“康妮”重创台湾后，给福建沿海带来狂风暴雨，然后向日本方向移动](/articles/voa/1011362.md)
 
