--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-14 [特朗普新防长人选为美国优先派 台防长：避免台海战争符合美台共同利益](/articles/voa/1011050.md)
+
+11-14 [特朗普外交团队初具规模，鹰派人物将主导对华政策](/articles/voa/1011051.md)
+
 11-14 [特朗普提名鲁比奥出任国务卿,两党都有议员表达支持](/articles/voa/1011052.md)
 
 11-14 [以色列攻击导致加沙3名儿童死亡 黎巴嫩6人丧生](/articles/voa/1011053.md)
@@ -596,8 +600,4 @@
 11-2 [台湾军方人员在美军基地接受“海马斯”训练 照片及名单遭中国网民转贴引风波](/articles/voa/1011348.md)
 
 11-2 [消息人士：在拜登对庇护的限制措施下，10月份美国边境逮捕人数仍较低](/articles/voa/1011349.md)
-
-11-2 [飓风和罢工造成大幅减员，美国10月新增就业仅1.2万](/articles/voa/1011350.md)
-
-11-2 [报复将至？以色列对伊朗的打击及其对中国的影响](/articles/voa/1011351.md)
 
