--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-14 [联合国谴责对黎巴嫩维和部队的袭击 警告以色列立新法迫使救济机构停摆的后果](/articles/voa/1011049.md)
+
 11-14 [特朗普新防长人选为美国优先派 台防长：避免台海战争符合美台共同利益](/articles/voa/1011050.md)
 
 11-14 [特朗普外交团队初具规模，鹰派人物将主导对华政策](/articles/voa/1011051.md)
@@ -598,6 +600,4 @@
 11-2 [特朗普访问密歇根州阿拉伯裔美国人聚居地迪尔伯恩](/articles/voa/1011347.md)
 
 11-2 [台湾军方人员在美军基地接受“海马斯”训练 照片及名单遭中国网民转贴引风波](/articles/voa/1011348.md)
-
-11-2 [消息人士：在拜登对庇护的限制措施下，10月份美国边境逮捕人数仍较低](/articles/voa/1011349.md)
 
