--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-14 [特朗普欲重建强大美军对中国来说意味着什么？](/articles/voa/1011047.md)
+
+11-14 [路透社：特朗普团队正在起草五角大楼官员解雇名单](/articles/voa/1011048.md)
+
 11-14 [联合国谴责对黎巴嫩维和部队的袭击 警告以色列立新法迫使救济机构停摆的后果](/articles/voa/1011049.md)
 
 11-14 [特朗普新防长人选为美国优先派 台防长：避免台海战争符合美台共同利益](/articles/voa/1011050.md)
@@ -596,8 +600,4 @@
 11-2 [美两院两党逾百议员就中国最近终止跨国收养一事联名致函拜登，为美国家庭和他们认养的中国儿童呼吁](/articles/voa/1011345.md)
 
 11-2 [朝鲜誓言支持俄对乌战争直至取胜之际 美国宣布再对乌军援4.25亿美元](/articles/voa/1011346.md)
-
-11-2 [特朗普访问密歇根州阿拉伯裔美国人聚居地迪尔伯恩](/articles/voa/1011347.md)
-
-11-2 [台湾军方人员在美军基地接受“海马斯”训练 照片及名单遭中国网民转贴引风波](/articles/voa/1011348.md)
 
