--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+11-14 [北京黑名单上的卢比奥获提名国务卿 将如何影响双边关系](/articles/dw/1023707.md)
+
+11-14 [00后女孩代孕流产 黑产链再引伦理热议](/articles/dw/1023708.md)
+
+11-14 [客座评论：特朗普会成为美国版普京吗？](/articles/dw/1023709.md)
+
 11-14 [这一次，中国还能应对特朗普的关税战吗？](/articles/dw/1023710.md)
 
 11-14 [川普回歸前最後的拜習會 美中打算談什麼？](/articles/dw/1023711.md)
@@ -594,10 +600,4 @@
 10-14 [特斯拉自驾出租车Robotaxi：是未来趋势还是噱头？](/articles/dw/1024005.md)
 
 10-14 [连环强奸犯针对中国女性  德国警方发布中文警示](/articles/dw/1024006.md)
-
-10-14 [北京制裁台湾黑熊学院 指其“暴力台独”](/articles/dw/1024007.md)
-
-10-14 [从伊朗导弹袭击看如何防御中国的轰炸](/articles/dw/1024008.md)
-
-10-14 [乌克兰敦促西方对「胜利计划」做出承诺](/articles/dw/1024009.md)
 
