--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-14 [北京黑名单上的卢比奥提名国务卿 如何影响双边关系](/articles/dw/1023706.md)
+
 11-14 [北京黑名单上的卢比奥获提名国务卿 将如何影响双边关系](/articles/dw/1023707.md)
 
 11-14 [00后女孩代孕流产 黑产链再引伦理热议](/articles/dw/1023708.md)
@@ -598,6 +600,4 @@
 10-14 [中国称军演圆满落幕 欧美谴责吁克制](/articles/dw/1024004.md)
 
 10-14 [特斯拉自驾出租车Robotaxi：是未来趋势还是噱头？](/articles/dw/1024005.md)
-
-10-14 [连环强奸犯针对中国女性  德国警方发布中文警示](/articles/dw/1024006.md)
 
