--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-14 [观人随笔｜突发事件信息发布不能被垄断](/articles/cdt/335505.md)
+
 11-14 [每日一语 2024.11.23](/articles/cdt/335507.md)
 
 11-14 [每日一语 2024.11.12](/articles/cdt/335509.md)
@@ -598,6 +600,4 @@
 10-8 [【CDT周报】第189期：国庆期间，上海没有砍人，西安没有下雪](/articles/cdt/336568.md)
 
 10-6 [【CDT报告汇】女权电影《芭比》出品方被爆出“剥削”中国女工（外二篇）](/articles/cdt/336573.md)
-
-10-6 [【重温】玖奌杂货店｜47年前的今天，粉碎“四人帮”，十年“文革”结束](/articles/cdt/336575.md)
 
