--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-14 [再触北京敏感神经，蔡英文下周出访加拿大并在国际安全论坛上致辞](/articles/voa/1011039.md)
+
+11-14 [习近平为秘鲁钱凯港开港，秘鲁将成中美在南美角力新热点](/articles/voa/1011040.md)
+
 11-14 [路透：鲁比奥出任国务卿体现特朗普对华政策，影响将超出高关税](/articles/voa/1011041.md)
 
 11-14 [国事光析：骑行开封？共产党见不得你个性开扬！](/articles/voa/1011042.md)
@@ -596,8 +600,4 @@
 11-2 [以色列轰炸加沙和黎巴嫩 美国大选前停火的希望逐渐破灭](/articles/voa/1011337.md)
 
 11-2 [美国情报部门称“俄罗斯影响者”伪造了佐治亚州选民舞弊的假视频](/articles/voa/1011338.md)
-
-11-2 [中国扩大对韩国等9国免签 微博网民仇韩言论齐发](/articles/voa/1011339.md)
-
-11-2 [朝鲜派万名军人驰援俄罗斯 泽连斯基吁盟友勿袖手旁观](/articles/voa/1011340.md)
 
