--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-15 [台湾退役舰长珠海航展称“中国强”退役军官成中共内宣利器引发台湾国安隐忧](/articles/voa/1011037.md)
+
+11-15 [香港依反恐法起诉的杀警“屠龙案”主谋被判重刑](/articles/voa/1011038.md)
+
 11-14 [再触北京敏感神经，蔡英文下周出访加拿大并在国际安全论坛上致辞](/articles/voa/1011039.md)
 
 11-14 [习近平为秘鲁钱凯港开港，秘鲁将成中美在南美角力新热点](/articles/voa/1011040.md)
@@ -596,8 +600,4 @@
 11-2 [身处台海紧张局势中心的台湾紧盯美国大选进展](/articles/voa/1011335.md)
 
 11-2 [美大选白热化 华盛顿州收暴力事件通报派出国民兵 哈里斯、特朗普力拼威斯康星州](/articles/voa/1011336.md)
-
-11-2 [以色列轰炸加沙和黎巴嫩 美国大选前停火的希望逐渐破灭](/articles/voa/1011337.md)
-
-11-2 [美国情报部门称“俄罗斯影响者”伪造了佐治亚州选民舞弊的假视频](/articles/voa/1011338.md)
 
