--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-15 [中国应用程序席卷东南亚对当地是福还是祸？](/articles/voa/1011033.md)
+
 11-15 [石坡茂筹划与特朗普会面 新政局下美日同盟面临机遇与挑战](/articles/voa/1011034.md)
 
 11-15 [俄罗斯高官参观珠海航展 关注中国军事技术的发展](/articles/voa/1011035.md)
@@ -598,6 +600,4 @@
 11-3 [泽连斯基呼吁西方盟友允许向俄境内的朝军发动先发制人的打击](/articles/voa/1011331.md)
 
 11-2 [中国前卫文艺空间受限：从《三体》编辑被查到金星演出被拒，多层禁忌遏制文化创新？](/articles/voa/1011332.md)
-
-11-2 [台湾恐成美国“弃子”? 特朗普选前撂话再掀两岸论战](/articles/voa/1011333.md)
 
