--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-15 [风声OPINION｜高中学生会“塌方式腐败”，根源在哪？](/articles/cdt/335489.md)
+
+11-15 [旧闻评论｜流量挂帅的文旅接不住夜骑的青春](/articles/cdt/335491.md)
+
+11-15 [冰川思享号｜教授鼓励年轻人啃老，有一种鸡汤叫“媚青”](/articles/cdt/335493.md)
+
+11-15 [齐物学堂｜街头阳刚：作为公众表演的男性谋杀-自杀行为](/articles/cdt/335495.md)
+
 11-14 [观人随笔｜突发事件信息发布不能被垄断](/articles/cdt/335505.md)
 
 11-14 [每日一语 2024.11.13](/articles/cdt/335507.md)
@@ -592,12 +600,4 @@
 10-7 [【404文库】新新默存｜王五四：忽然爱国的咪蒙](/articles/cdt/336560.md)
 
 10-7 [凤凰网｜疯狂的保研：举报同学，献血加分，规则盲盒](/articles/cdt/336563.md)
-
-10-7 [风声OPINION｜酒店被发现针孔摄像头该承担什么责任？](/articles/cdt/336565.md)
-
-10-8 [财新｜入学五天后，他们纵身一跳](/articles/cdt/336567.md)
-
-10-8 [【CDT周报】第189期：国庆期间，上海没有砍人，西安没有下雪](/articles/cdt/336568.md)
-
-10-6 [【CDT报告汇】女权电影《芭比》出品方被爆出“剥削”中国女工（外二篇）](/articles/cdt/336573.md)
 
