--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-15 [每日一语 2024.11.14](/articles/cdt/335464.md)
+
+11-15 [【CDT关注】莽莽｜一所独立藏语民族学校的坚守与落幕](/articles/cdt/335467.md)
+
 11-15 [齐物学堂｜街头阳刚：作为公众表演的男性谋杀-自杀行为](/articles/cdt/335486.md)
 
 11-15 [风声OPINION｜高中学生会“塌方式腐败”，根源在哪？](/articles/cdt/335489.md)
@@ -596,8 +600,4 @@
 10-7 [剑客写字的地方｜有些人在用最丢脸的方法，帮我们“出名”！](/articles/cdt/336551.md)
 
 10-7 [【404文库】双刀流｜堪比十个“北极鲶鱼”的“冬冬安安”，他到底是谁的后代？](/articles/cdt/336554.md)
-
-10-7 [读宋史的赵大胖｜一生都在追求“教育意义”的家长](/articles/cdt/336558.md)
-
-10-7 [【404文库】新新默存｜王五四：忽然爱国的咪蒙](/articles/cdt/336560.md)
 
