--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-15 [特朗普能帮美国战胜中国](/articles/nyt/1042207.md)
+
 11-14 [拜登与特朗普在白宫会面：假装友好的29秒](/articles/nyt/1042208.md)
 
 11-14 [特朗普新政府人事布局：忠诚挂帅，个人利益为先](/articles/nyt/1042209.md)
@@ -598,6 +600,4 @@
 8-6 [她认为自己的统治牢不可破，孟加拉人民证明并非如此](/articles/nyt/1042505.md)
 
 8-6 [关于英国各地爆发的暴力骚乱，目前我们所知的](/articles/nyt/1042506.md)
-
-8-6 [对美国经济放缓担忧加剧，全球股市大崩盘](/articles/nyt/1042507.md)
 
