--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-15 [菲律宾向争议海域军舰运送物资 中国称全程监督“非法”运补](/articles/voa/1011021.md)
+
 11-15 [APEC外长会议秘鲁登场,美国盼推动与日韩三边伙伴关系制度化](/articles/voa/1011022.md)
 
 11-15 [前美国之音记者为抗议伊朗威权统治者在德黑兰自杀身亡](/articles/voa/1011023.md)
@@ -598,6 +600,4 @@
 11-3 [刘德华在台演唱《中国人》成中共宣传素材 引起台湾舆论分裂](/articles/voa/1011319.md)
 
 11-3 [中国催生政策不敌经济下滑现实 今年前三季度结婚人数较去年同比下降](/articles/voa/1011320.md)
-
-11-3 [锡克教领袖遇刺案引外交风波升级 印度怒斥加拿大暗杀指控“荒谬且毫无根据”](/articles/voa/1011321.md)
 
