--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-15 [每日一语 2024.11.15](/articles/cdt/335449.md)
+
 11-15 [建设性意见｜顶刊《柳叶刀》发表中成药大规模随机双盲试验结果！居然……](/articles/cdt/335458.md)
 
 11-15 [每日一语 2024.11.14](/articles/cdt/335464.md)
@@ -598,6 +600,4 @@
 10-7 [深涵说｜互联网没有记忆，举大旗者永远有赛道](/articles/cdt/336547.md)
 
 10-7 [观人随笔｜当你连王楚钦都不能调侃](/articles/cdt/336549.md)
-
-10-7 [剑客写字的地方｜有些人在用最丢脸的方法，帮我们“出名”！](/articles/cdt/336551.md)
 
