--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-15 [媒体：赖清德将出访太平洋 过境夏威夷或关岛](/articles/dw/1023699.md)
+
 11-15 [「從錢凱到上海」 習近平參與秘魯開港儀式](/articles/dw/1023700.md)
 
 11-14 [大英博物馆获得价值10亿英镑中国瓷器藏品捐赠](/articles/dw/1023701.md)
@@ -598,6 +600,4 @@
 10-15 [上合组织巴基斯坦峰会召开 安全阴云笼罩](/articles/dw/1023997.md)
 
 10-15 [完美！制作提拉米苏如何保证不翻车？](/articles/dw/1023998.md)
-
-10-15 [晚点救命：俄罗斯破坏活动险在德引发空难](/articles/dw/1023999.md)
 
