--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-15 [上海书单：阅读一座城市的过去和未来](/articles/nyt/1042204.md)
+
 11-15 [特朗普将如何输掉与中国的贸易战](/articles/nyt/1042205.md)
 
 11-15 [“2025计划”是什么？特朗普是幕后推手吗？](/articles/nyt/1042206.md)
@@ -598,6 +600,4 @@
 8-7 [“说错话”被禁言？胡锡进微博停更之谜](/articles/nyt/1042502.md)
 
 8-7 [当巴黎一间小小中餐馆内挤满乒乓球奥运冠军](/articles/nyt/1042503.md)
-
-8-7 [明尼苏达州州长沃尔兹成为贺锦丽竞选搭档](/articles/nyt/1042504.md)
 
