--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-15 [高官贪腐前赴后继，中国前农业部长唐仁健被“双开”](/articles/voa/1011015.md)
+
 11-15 [中共“红三代”薄瓜瓜传将结亲台湾地方望族孙女](/articles/voa/1011016.md)
 
 11-15 [路透：台湾总统赖清德数周内出访 計劃过境夏威夷、关岛](/articles/voa/1011017.md)
@@ -598,6 +600,4 @@
 11-4 [台湾外交部：台湾不忧心美国大选结果，无论谁当选都对未来台美关系深具信心](/articles/voa/1011313.md)
 
 11-3 [美国大选进入倒计时，哈里斯和特朗普分赴摇摆州为胜选做最后努力](/articles/voa/1011314.md)
-
-11-3 [遭中共断网逾两个月 高瑜在京生活、就诊寸步难行](/articles/voa/1011315.md)
 
