--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+11-15 [肖尔茨下周或最后一次以联邦总理身份见习近平](/articles/dw/1023690.md)
+
+11-15 [中国十月工业产出增长放缓 零售超预期](/articles/dw/1023691.md)
+
+11-15 [特朗普拟废除电动车税收优惠 利好特斯拉？](/articles/dw/1023692.md)
+
+11-15 [图片回顾：联邦德国历史上的信任投票](/articles/dw/1023693.md)
+
 11-15 [锁定在德华人女性犯案 连环强奸案嫌疑人落网](/articles/dw/1023694.md)
 
 11-15 [肖尔茨可能最后一次以联邦总理身份见习近平](/articles/dw/1023695.md)
@@ -592,12 +600,4 @@
 10-16 [泽连斯基公布“胜利计划” 强调不会割让领土换和平](/articles/dw/1023988.md)
 
 10-16 [德国总理：必须打造新政策拯救德国工业](/articles/dw/1023989.md)
-
-10-16 [分析师：中国第三季度经济增幅将创今年新低](/articles/dw/1023990.md)
-
-10-16 [朝韩冲突不断，金正恩真的会按下核按钮吗？](/articles/dw/1023991.md)
-
-10-16 [增长6.1%  越南经济成功的原因是什么？](/articles/dw/1023992.md)
-
-10-16 [习近平视察福建 台官员称军演让国际更挺台](/articles/dw/1023993.md)
 
