--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,7 +5,11 @@
 
 11-15 [每日一语 2024.11.15](/articles/cdt/335449.md)
 
+11-15 [【404文库】竹不倒｜记者被打，是让人恐惧的开始！](/articles/cdt/335451.md)
+
 11-15 [【404文库】阜成门六号院｜胡耀邦在延安时期的活动旧址及其经历考略（延安、瓦窑堡、吕梁）](/articles/cdt/335453.md)
+
+11-15 [【404文库】新周刊｜34岁单亲妈妈，带女儿入住烂尾楼的76天](/articles/cdt/335455.md)
 
 11-15 [建设性意见｜顶刊《柳叶刀》发表中成药大规模随机双盲试验结果！居然……](/articles/cdt/335458.md)
 
@@ -596,8 +600,4 @@
 10-8 [每日一语 2024.10.6](/articles/cdt/336531.md)
 
 10-7 [每日一语 2024.10.7](/articles/cdt/336533.md)
-
-10-7 [【CDT关注】低音｜杳无音讯：何方美和她失踪的女儿们](/articles/cdt/336544.md)
-
-10-7 [深涵说｜互联网没有记忆，举大旗者永远有赛道](/articles/cdt/336547.md)
 
