--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-15 [纽约时报：马斯克密会伊朗驻联合国大使](/articles/dw/1023689.md)
+
 11-15 [肖尔茨下周或最后一次以联邦总理身份见习近平](/articles/dw/1023690.md)
 
 11-15 [中国十月工业产出增长放缓 零售超预期](/articles/dw/1023691.md)
@@ -598,6 +600,4 @@
 10-16 [解决住房问题 香港将要求「劏房」改建升级](/articles/dw/1023987.md)
 
 10-16 [泽连斯基公布“胜利计划” 强调不会割让领土换和平](/articles/dw/1023988.md)
-
-10-16 [德国总理：必须打造新政策拯救德国工业](/articles/dw/1023989.md)
 
