--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-16 [香港三季度GDP环比收缩1.1%，旅游出口持续下滑](/articles/voa/1011007.md)
+
+11-16 [为台积电在美设厂奖励66亿美元！拜登政府赶在特朗普就职前签署最终协议](/articles/voa/1011008.md)
+
+11-16 [前英国议员出任曾被指为“中国海外警署”公司高层 引港人疑虑资讯安全](/articles/voa/1011009.md)
+
 11-16 [石破茂习近平秘鲁相会 日中关系走向仍耐人寻味](/articles/voa/1011010.md)
 
 11-16 [中国人权律师丁家喜、维权人士张海涛获独立中文笔会颁奖 关切两人狱中处境](/articles/voa/1011011.md)
@@ -594,10 +600,4 @@
 11-4 [中国太阳能电池板厂商灵活转移产地规避美国关税](/articles/voa/1011305.md)
 
 11-4 [联邦法官允许艾奥瓦州质疑选民名单 或影响归化公民](/articles/voa/1011306.md)
-
-11-4 [维基百科在印度陷入法律纠纷](/articles/voa/1011307.md)
-
-11-4 [以色列派兵进入叙利亚，拘留据称的伊朗代理人](/articles/voa/1011308.md)
-
-11-4 [联合国专家：伊朗把也门胡塞反政府武装改造成强大的军事力量](/articles/voa/1011309.md)
 
