--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-16 [朔尔茨罕见与普京通话 泽连斯基：这会打开“潘多拉盒子”](/articles/voa/1011005.md)
+
+11-16 [中国核动力航母有谱？四川核反应堆原型曝光](/articles/voa/1011006.md)
+
 11-16 [香港三季度GDP环比收缩1.1%，旅游出口持续下滑](/articles/voa/1011007.md)
 
 11-16 [为台积电在美设厂奖励66亿美元！拜登政府赶在特朗普就职前签署最终协议](/articles/voa/1011008.md)
@@ -596,8 +600,4 @@
 11-4 [缅甸军政府领导人本周访中 政变后首次](/articles/voa/1011303.md)
 
 11-4 [中国太阳能电池板厂商灵活转移产地规避美国关税](/articles/voa/1011304.md)
-
-11-4 [中国太阳能电池板厂商灵活转移产地规避美国关税](/articles/voa/1011305.md)
-
-11-4 [联邦法官允许艾奥瓦州质疑选民名单 或影响归化公民](/articles/voa/1011306.md)
 
