--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-16 [伊朗高官访问贝鲁特，承诺支持黎巴嫩](/articles/voa/1011001.md)
+
 11-16 [美议员推出法案，要求取消中国的永久正常贸易关系地位](/articles/voa/1011002.md)
 
 11-16 [布林肯与台湾APEC领袖代表林信义会晤，讨论美台经济合作](/articles/voa/1011003.md)
@@ -598,6 +600,4 @@
 11-4 [在对华科技政策上，特朗普与哈里斯谁更可能对中国实施“卡脖子”战略?](/articles/voa/1011299.md)
 
 11-4 [中国政府就欧盟电动车反补贴终裁措施在世贸组织提起诉讼](/articles/voa/1011300.md)
-
-11-4 [美国权力交接在即，哈里斯、特朗普对华政策初探](/articles/voa/1011301.md)
 
