--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-16 [台湾APEC峰会代表邀请拜登访台](/articles/dw/1023687.md)
+
+11-16 [APEC秘鲁現場：中國的「實質影響力」究竟做到何種地步？](/articles/dw/1023688.md)
+
 11-15 [纽约时报：马斯克密会伊朗驻联合国大使](/articles/dw/1023689.md)
 
 11-15 [肖尔茨下周或最后一次以联邦总理身份见习近平](/articles/dw/1023690.md)
@@ -596,8 +600,4 @@
 10-17 [批英特爾在中國「吃飯砸鍋」 網安協會籲審查](/articles/dw/1023985.md)
 
 10-17 [第一發催淚彈之後：三個香港人的「後傘運人生」](/articles/dw/1023986.md)
-
-10-16 [解决住房问题 香港将要求「劏房」改建升级](/articles/dw/1023987.md)
-
-10-16 [泽连斯基公布“胜利计划” 强调不会割让领土换和平](/articles/dw/1023988.md)
 
