--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-16 [遭中国扣留四个多月后 台湾渔船“大进满88号”及船长获释](/articles/voa/1010987.md)
+
 11-16 [美国政府准备交接之际 最后一次“拜习会”周六在秘鲁登场](/articles/voa/1010988.md)
 
 11-16 [特朗普任命卡罗琳·莱维特为白宫史上最年轻新闻秘书](/articles/voa/1010989.md)
@@ -598,6 +600,4 @@
 11-5 [特朗普在大选前对媒体发起法律挑战](/articles/voa/1011285.md)
 
 11-5 [印尼与俄罗斯开始创先例的联合海军演习](/articles/voa/1011286.md)
-
-11-5 [菲律宾军队在南中国海开始夺岛演习](/articles/voa/1011287.md)
 
