--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-16 [美中芯片战再升级? 专家:特朗普对华制裁恐扩及14纳米成熟制程](/articles/voa/1010984.md)
+
+11-16 [特朗普顾问拉英国优先处理美英贸易问题，伦敦则想脚踩美欧“两只船”](/articles/voa/1010985.md)
+
 11-16 [拜习会前夕 中国驻美大使称愿同美国“做伙伴、做朋友”](/articles/voa/1010986.md)
 
 11-16 [遭中国扣留四个多月后 台湾渔船“大进满88号”及船长获释](/articles/voa/1010987.md)
@@ -596,8 +600,4 @@
 11-5 [美国就朝鲜出兵乌克兰议题在联合国与俄罗斯对抗](/articles/voa/1011282.md)
 
 11-5 [中国给予塔利班政权零关税待遇](/articles/voa/1011283.md)
-
-11-5 [动物闻诊：蜜蜂和狗能比医疗设备更早检测出人类癌症吗？](/articles/voa/1011284.md)
-
-11-5 [特朗普在大选前对媒体发起法律挑战](/articles/voa/1011285.md)
 
