--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-17 [拜登习近平重申管理美中竞争的重要性](/articles/voa/1010976.md)
+
+11-17 [日本外务大臣访问乌克兰，强调对朝鲜军队的共同担忧](/articles/voa/1010977.md)
+
 11-17 [《华尔街日报》：TikTok母公司字节跳动在美国禁令的不确定中估值三千亿美元](/articles/voa/1010978.md)
 
 11-17 [香港自由委员会主席郭明瀚：英方应要求高官与黎智英见面 结束单独囚禁](/articles/voa/1010979.md)
@@ -596,8 +600,4 @@
 11-5 [哈里斯和特朗普竞争入主白宫，美国总统大选结果选民决定](/articles/voa/1011274.md)
 
 11-5 [摇摆州佐治亚的关键县提前计票](/articles/voa/1011275.md)
-
-11-5 [大选前夕美当局警告俄罗斯加强虚假信息战](/articles/voa/1011276.md)
-
-11-5 [中国军方告诫年轻官兵不可参与网上约会与赌博](/articles/voa/1011277.md)
 
