--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-17 [日本自卫队明年将与美国海军陆战队一起在澳大利亚训练](/articles/voa/1010972.md)
+
 11-17 [以色列军队深入黎巴嫩之际 闪光弹袭击内塔尼亚胡宅邸](/articles/voa/1010973.md)
 
 11-17 [特朗普提名石油行业CEO赖特出任能源部长](/articles/voa/1010974.md)
@@ -598,6 +600,4 @@
 11-5 [美国大选结果即将揭晓 中国网民看好谁？](/articles/voa/1011270.md)
 
 11-5 [美国大选投票日，两党除角逐总统大位外 也在争夺国会参众两院控制权](/articles/voa/1011271.md)
-
-11-5 [两名中国公民在巴基斯坦遇袭受伤，袭击中国工人事件今年已达三起](/articles/voa/1011272.md)
 
