--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-17 [“自由，我踏马来辣(啦)” 洛杉矶民主人士市区骑行，声援河南夜骑大学生](/articles/voa/1010971.md)
+
 11-17 [日本自卫队明年将与美国海军陆战队一起在澳大利亚训练](/articles/voa/1010972.md)
 
 11-17 [以色列军队深入黎巴嫩之际 闪光弹袭击内塔尼亚胡宅邸](/articles/voa/1010973.md)
@@ -598,6 +600,4 @@
 11-5 [中国官媒网民批美选“大乱斗” 分析：对美“添乱”巩固内部心防](/articles/voa/1011269.md)
 
 11-5 [美国大选结果即将揭晓 中国网民看好谁？](/articles/voa/1011270.md)
-
-11-5 [美国大选投票日，两党除角逐总统大位外 也在争夺国会参众两院控制权](/articles/voa/1011271.md)
 
