--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-17 [英媒：朝鲜重型武器被投入库尔斯克战场](/articles/dw/1023674.md)
+
 11-17 [最后一场拜习会 中美领导人在秘鲁会晤](/articles/dw/1023675.md)
 
 11-17 [赴俄罗斯前线的朝鲜士兵会将“幻灭”带回国?](/articles/dw/1023676.md)
@@ -598,6 +600,4 @@
 10-18 [什么导致朝韩关系再度降至冰点？](/articles/dw/1023972.md)
 
 10-18 [IMF总裁：中国经济已经庞大到不能继续依靠出口拉动增长](/articles/dw/1023973.md)
-
-10-18 [年内第三次降息 欧洲央行将关键利率下调至3.25%](/articles/dw/1023974.md)
 
