--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-17 [中国一周内两起骇人杀人要案，民众反省社会到底病在哪里？](/articles/voa/1010969.md)
+
 11-17 [习近平藉秘鲁“拜习会”释美中合作意愿，特朗普会照单全收吗?](/articles/voa/1010970.md)
 
 11-17 [“自由，我踏马来辣(啦)” 洛杉矶民主人士市区骑行，声援河南夜骑大学生](/articles/voa/1010971.md)
@@ -598,6 +600,4 @@
 11-6 [七国集团及其盟友警告俄罗斯不得将朝鲜部队部署至乌克兰](/articles/voa/1011267.md)
 
 11-5 [中国服务业景气指数十月扩张加快，但企业前景预期仍较低](/articles/voa/1011268.md)
-
-11-5 [中国官媒网民批美选“大乱斗” 分析：对美“添乱”巩固内部心防](/articles/voa/1011269.md)
 
