--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-17 [印度成功试射高超音速导弹](/articles/dw/1023672.md)
+
 11-17 [配合地面进攻? 俄军猛攻乌克兰能源设施](/articles/dw/1023673.md)
 
 11-17 [英媒：朝鲜重型武器被投入库尔斯克战场](/articles/dw/1023674.md)
@@ -598,6 +600,4 @@
 10-18 [德國國土為何有一個「小美利堅」？](/articles/dw/1023970.md)
 
 10-18 [解码中国：迫在眉睫的全面贸易战威胁](/articles/dw/1023971.md)
-
-10-18 [什么导致朝韩关系再度降至冰点？](/articles/dw/1023972.md)
 
