--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-18 [拜登成为首位访问亚马逊雨林的美国现任总统](/articles/voa/1010963.md)
+
 11-18 [以色列袭击贝鲁特打死真主党发言人](/articles/voa/1010964.md)
 
 11-18 [消息人士：拜登首次授权乌克兰使用美国提供的远程导弹攻击俄罗斯境内目标](/articles/voa/1010965.md)
@@ -598,6 +600,4 @@
 11-6 [美国选民今天投票选择新总统：卡玛拉·哈里斯或唐纳德·特朗普](/articles/voa/1011261.md)
 
 11-6 [内塔尼亚胡解除以色列国防部长职务](/articles/voa/1011262.md)
-
-11-6 [日本希望美国总统大选结果不会改变美日同盟](/articles/voa/1011263.md)
 
