--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-18 [特朗普威胁升级对华贸易战，马来西亚看到机遇](/articles/nyt/1042201.md)
+
 11-18 [习近平与拜登会晤，向特朗普发出信号](/articles/nyt/1042202.md)
 
 11-18 [无锡高校发生持刀行凶事件，导致八人死亡17人受伤](/articles/nyt/1042203.md)
@@ -598,6 +600,4 @@
 8-8 [iPhone为何中国制造？](/articles/nyt/1042499.md)
 
 8-7 [哈马斯新任政治“头号人物”是谁？](/articles/nyt/1042500.md)
-
-8-7 [关于贺锦丽搭档沃尔兹的19个事实：1989年曾在中国教书](/articles/nyt/1042501.md)
 
