--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-18 [每日一语 2024.11.17](/articles/cdt/335386.md)
+
 11-17 [每日一语 2024.11.16](/articles/cdt/335394.md)
 
 11-17 [成都客｜无处可逃，不如创造](/articles/cdt/335396.md)
@@ -598,6 +600,4 @@
 10-9 [极昼工作室｜白石洲拆迁后，那些上学奔波的孩子都去哪儿了？](/articles/cdt/336494.md)
 
 10-9 [个人记忆库｜过去一年，中国人对外部世界的观感全面恶化](/articles/cdt/336496.md)
-
-10-9 [三联生活周刊｜餐饮业进入寒冬，你还舍得去餐馆吃饭吗？](/articles/cdt/336498.md)
 
