--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-18 [小河满了｜我们要在民间相互守望](/articles/cdt/335372.md)
+
 11-18 [旧闻评论｜李子柒复出：一种符号，一次奖赏](/articles/cdt/335379.md)
 
 11-18 [小河满了｜我们要在民间相互守望](/articles/cdt/335381.md)
@@ -598,6 +600,4 @@
 10-10 [鱼眼观察｜监控对着意见箱，这事真够离谱的](/articles/cdt/336484.md)
 
 10-10 [竹不倒｜权力越玩越疯，底层老百姓何去何从？](/articles/cdt/336486.md)
-
-10-9 [张3丰的世界｜“遮蔽”不会带来安全感](/articles/cdt/336490.md)
 
