--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-18 [纽约州劳工部对神韵艺术团展开调查](/articles/nyt/1042200.md)
+
 11-18 [特朗普威胁升级对华贸易战，马来西亚看到机遇](/articles/nyt/1042201.md)
 
 11-18 [习近平与拜登会晤，向特朗普发出信号](/articles/nyt/1042202.md)
@@ -598,6 +600,4 @@
 8-8 [全球股市剧烈震荡背后的原因是什么？](/articles/nyt/1042498.md)
 
 8-8 [iPhone为何中国制造？](/articles/nyt/1042499.md)
-
-8-7 [哈马斯新任政治“头号人物”是谁？](/articles/nyt/1042500.md)
 
