--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-18 [有病要讀書plus｜江苏职校那位刀手的“自白书”问题](/articles/cdt/335362.md)
+
+11-18 [青年志Youthology｜为杀夫女性和失地女性辩护的40年](/articles/cdt/335366.md)
+
 11-18 [倪刃｜不愿在沉默中灭亡，于是在“安娜草堂”呐喊](/articles/cdt/335368.md)
 
 11-18 [小河满了｜我们要在民间相互守望](/articles/cdt/335372.md)
@@ -596,8 +600,4 @@
 10-10 [每日一语 2024.10.9](/articles/cdt/336478.md)
 
 10-10 [【404文库】闻道不分朝夕｜38年前，蒋经国松口“解严”，开放党禁报禁](/articles/cdt/336480.md)
-
-10-10 [【404文库】常识流通处｜一个医保局长之死](/articles/cdt/336482.md)
-
-10-10 [鱼眼观察｜监控对着意见箱，这事真够离谱的](/articles/cdt/336484.md)
 
