--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-18 [日本首相石破茂因堵车错过APEC集体合影](/articles/dw/1023664.md)
+
 11-18 [美允许乌克兰远程攻击俄腹地 各方何反应？](/articles/dw/1023665.md)
 
 11-18 [德国指中国助俄罗斯生产无人机 贝尔博客:“必将引来后果“](/articles/dw/1023666.md)
@@ -598,6 +600,4 @@
 10-19 [特朗普：若中国进入台湾 将征高额关税](/articles/dw/1023962.md)
 
 10-19 [德国交响乐团音乐会   机器人当指挥](/articles/dw/1023963.md)
-
-10-19 [巴黎车展 中欧车企摆擂台](/articles/dw/1023964.md)
 
