--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-19 [习近平在巴西会见英国首相斯塔默，斯塔默提起黎智英的案子](/articles/voa/1010949.md)
+
+11-19 [中澳领导人巴西会晤，两国关系绕过拐点？](/articles/voa/1010950.md)
+
 11-19 [俄罗斯大规模空袭造成乌克兰苏梅市11人死亡、89人受伤](/articles/voa/1010951.md)
 
 11-19 [美菲签署军事情报共享协议，为美提供更先进武器铺路](/articles/voa/1010952.md)
@@ -596,8 +600,4 @@
 11-6 [共和党赢得美国参议院多数 众议院席次取得进展](/articles/voa/1011247.md)
 
 11-6 [印度外长称无论谁当选 美国都将更加孤立主义](/articles/voa/1011248.md)
-
-11-6 [特朗普发表胜选演说 哈里斯尚未表态](/articles/voa/1011249.md)
-
-11-6 [台湾国安局长：无论谁当选，美国都将继续对台友好政策](/articles/voa/1011250.md)
 
