--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -13,6 +13,8 @@
 
 11-18 [观人随笔｜真正的灾难，是一个社会走丢了反思能力](/articles/cdt/335359.md)
 
+11-19 [【CDTV】习近平第三次访问“秘bì鲁”，还是没能记住正确发音](/articles/cdt/335360.md)
+
 11-18 [有病要讀書plus｜江苏职校那位刀手的“自白书”问题](/articles/cdt/335362.md)
 
 11-18 [青年志Youthology｜为杀夫女性和失地女性辩护的40年](/articles/cdt/335366.md)
@@ -598,6 +600,4 @@
 10-11 [每日一语 2024.10.10](/articles/cdt/336469.md)
 
 10-11 [张3丰的世界｜历史中的遮蔽：你只是爱皇帝而已](/articles/cdt/336470.md)
-
-10-11 [风声OPINION｜经济复苏仍需要强力政策，建议直接发钱](/articles/cdt/336471.md)
 
