--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-19 [对乌克兰来说，美国批准使用远程导弹标志着战略性的转变](/articles/voa/1010945.md)
+
+11-19 [特朗普新内阁与台海政策：抗中是否等于友台？](/articles/voa/1010946.md)
+
+11-19 [克里姆林宫：拜登的导弹决定提升了与乌克兰战争的紧张](/articles/voa/1010947.md)
+
 11-19 [白纸运动两周年，亲历者:在裂隙去发声，我们不后悔](/articles/voa/1010948.md)
 
 11-19 [习近平在巴西会见英国首相斯塔默，斯塔默提起黎智英的案子](/articles/voa/1010949.md)
@@ -594,10 +600,4 @@
 11-7 [中国网民看特朗普胜选 既看热闹又担忧“中国不好过”](/articles/voa/1011243.md)
 
 11-6 [特朗普当选，中国心情复杂，美中竞争或更加激烈](/articles/voa/1011244.md)
-
-11-6 [特朗普赢得2024年美国总统选举](/articles/voa/1011245.md)
-
-11-6 [全球对特朗普宣布胜选的反应](/articles/voa/1011246.md)
-
-11-6 [共和党赢得美国参议院多数 众议院席次取得进展](/articles/voa/1011247.md)
 
