--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-19 [联合国安理会呼吁对加沙紧急援助](/articles/voa/1010941.md)
+
+11-19 [五角大楼拒绝克里姆林宫对美国助长乌克兰升级的批评](/articles/voa/1010942.md)
+
+11-19 [珠海惨案后中国排查“八失人员” 将社会不稳定归咎边缘群体被指本末倒置](/articles/voa/1010943.md)
+
 11-19 [二十国集团对乌克兰的共识出现裂痕，美国同时加紧援助](/articles/voa/1010944.md)
 
 11-19 [对乌克兰来说，美国批准使用远程导弹标志着战略性的转变](/articles/voa/1010945.md)
@@ -594,10 +600,4 @@
 11-7 [乌军首次与朝鲜部队交火，俄乌战争重大升级](/articles/voa/1011239.md)
 
 11-7 [特朗普重返白宫 分析：印太盟友与中国皆忧地缘政治“剧变”](/articles/voa/1011240.md)
-
-11-7 [特朗普胜选催动美国股市暴涨，中港股市动荡](/articles/voa/1011241.md)
-
-11-7 [特朗普当选料将改变美欧关系格局，欧洲称愿加强合作同时维护自身利益](/articles/voa/1011242.md)
-
-11-7 [中国网民看特朗普胜选 既看热闹又担忧“中国不好过”](/articles/voa/1011243.md)
 
