--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-19 [中国政府打压境内书店之际，中文书商在海外拓展事业](/articles/voa/1010939.md)
+
+11-19 [巴西G20峰会,拜登总统宣布“历史性”40亿美元援助贫困国家](/articles/voa/1010940.md)
+
 11-19 [联合国安理会呼吁对加沙紧急援助](/articles/voa/1010941.md)
 
 11-19 [五角大楼拒绝克里姆林宫对美国助长乌克兰升级的批评](/articles/voa/1010942.md)
@@ -596,8 +600,4 @@
 11-7 [俄罗斯渲染美国大选“末日景象”](/articles/voa/1011237.md)
 
 11-7 [特朗普就任后预计将重启对伊朗的制裁，中国小炼油厂受影响最大](/articles/voa/1011238.md)
-
-11-7 [乌军首次与朝鲜部队交火，俄乌战争重大升级](/articles/voa/1011239.md)
-
-11-7 [特朗普重返白宫 分析：印太盟友与中国皆忧地缘政治“剧变”](/articles/voa/1011240.md)
 
