--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-19 [拜登在全球舞台“最后时刻”：推动为乌克兰提供更多支持](/articles/nyt/1042197.md)
+
 11-19 [贺锦丽是如何在15周内花光15亿美元的](/articles/nyt/1042198.md)
 
 11-18 [扔向华盛顿的“手榴弹”：特朗普如何颠覆美国政治规范](/articles/nyt/1042199.md)
@@ -598,6 +600,4 @@
 8-8 [蒂姆·沃尔兹非凡的平凡人生](/articles/nyt/1042495.md)
 
 8-8 [布林肯再访亚洲强化盟友关系，强调美国承诺](/articles/nyt/1042496.md)
-
-8-8 [贺锦丽想从“中西部老爹”沃尔兹身上获得什么](/articles/nyt/1042497.md)
 
