--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-19 [G20峰會：習近平走上C位 聯合宣言淪空談?](/articles/dw/1023657.md)
+
 11-19 [乌克兰战争1000天：图解战争后果](/articles/dw/1023658.md)
 
 11-18 [一个月六场台风  菲律宾饱受重创](/articles/dw/1023659.md)
@@ -598,6 +600,4 @@
 10-19 [中国公布两用物项出口管制条例](/articles/dw/1023955.md)
 
 10-19 [中资控股秘鲁巨型港口拟11月试运营](/articles/dw/1023956.md)
-
-10-19 [客座评论：中国议题为何没成为美国大选焦点？](/articles/dw/1023957.md)
 
