--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-19 [客座评论：特朗普2.0对中国是否会超级强硬](/articles/dw/1023654.md)
+
 11-19 [英相与习近平谈人权 中方驱离外媒](/articles/dw/1023655.md)
 
 11-19 [欧盟的外交政策能否顶撞特朗普？](/articles/dw/1023656.md)
@@ -598,6 +600,4 @@
 10-20 [哈里斯 vs. 特朗普：在堕胎、以色列、俄乌等关键议题上各持何种立场？](/articles/dw/1023952.md)
 
 10-20 [意大利在阿尔巴尼亚的难民中心开始启用](/articles/dw/1023953.md)
-
-10-20 [长平观察：今年的诺贝尔经济学奖，十年前就让中共不高兴了](/articles/dw/1023954.md)
 
