--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-19 [冰点周刊｜职校乱象频出原因何在，政府又应该负责什么](/articles/cdt/335336.md)
+
 11-19 [法律圆桌｜“他死了就再也没有人知道了”：无差别杀人的背后](/articles/cdt/335338.md)
 
 11-19 [建设性意见｜疫情防控遗留的那些问题，至今仍在影响我们的生活](/articles/cdt/335340.md)
@@ -598,6 +600,4 @@
 10-12 [【404文库】法度Law｜褚朝新：他如此善于“打脸“是有原因的](/articles/cdt/336459.md)
 
 10-11 [【CDT报告汇】人权观察：中国政府跨国镇压手段以威胁在华亲属为主（外二篇）](/articles/cdt/336463.md)
-
-10-12 [【CDT周报】第190期：为什么要强行让113岁的管75岁的叫母亲？](/articles/cdt/336464.md)
 
