--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-20 [中国的求职陷阱: 找不到工作的大学生成待宰羔羊](/articles/voa/1010917.md)
+
 11-20 [中国和巴基斯坦举行五年来的首次反恐演习](/articles/voa/1010918.md)
 
 11-20 [中国大学生毕业人数将达1222万 高失业率与学历内卷加剧社会焦虑](/articles/voa/1010919.md)
@@ -598,6 +600,4 @@
 11-8 [日本首相石破茂寻求依安倍先例本月会晤特朗普巩固日美关系](/articles/voa/1011215.md)
 
 11-8 [特朗普行动迅速，酝酿新政府关键职位人选，推翻拜登政府的诸多政策](/articles/voa/1011216.md)
-
-11-7 [特朗普对中国挥舞高额关税大棒恐伤及美对华农产品出口](/articles/voa/1011217.md)
 
